add vn translation letters to elma's tracks

--- a/(2019) That's Why I Gave Up On Music/02. Deep Indigo.md
+++ b/(2019) That's Why I Gave Up On Music/02. Deep Indigo.md
@@ -4,21 +4,23 @@ await dv.view('_script');
 藍二乗 | Ai Nijou [[#^title]]
 #### Lyrics
 
-| Japanese                                                                                | Romanji                                                                                                                                                                              | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/01/08/yorushika-ai-nijou/)                                                                                                                                                                      |
-| --------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 変わらない風景 浅い正午<br><br>高架下、藍二乗、寝転ぶまま<br><br>白紙の人生に拍手の音が一つ鳴っている<br><br>空っぽな自分を今日も歌っていた      | kawaranai fuukei asai shougo<br><br>kouka shita, ai nijou, nekorobu mama<br><br>hakushi no jinsei ni hakushu no ne ga hitotsu natte iru<br><br>karappo na jibun o kyou mo utatte ita | The scenery doesn’t change; on a faded afternoon<br><br>I’m lying in the deep indigo beneath the overpass<br><br>I hear a single clap for my blank-page life<br><br>I was singing about my own emptiness today, as usual                                   |
-| 変わらないように<br><br>君が主役のプロットを書くノートの中<br><br>止まったガス水道 世間もニュースも所詮他人事<br><br>この人生さえほら、インクみたいだ | kawaranai you ni<br><br>kimi ga shuyaku no PUROTTO o kaku NOOTO no naka<br><br>tomatta GASU suidou seken mo NYUUSU mo shosen taningoto<br><br>kono jinsei sae hora, INKU mitai da    | So things wouldn’t change,<br><br>I wrote a story starring you in my notebook<br><br>My gas and water being cut off, society, and the news are all someone else’s problem<br><br>Look, my life is like ink                                                 |
-| あの頃ずっと頭に描いた夢も大人になるほど時効になっていく                                                            | ano koro zutto atama ni egaita yume mo otona ni naru hodo jikou ni natte iku                                                                                                         | The dream I had when I was young gets closer to its expiration date as I get older                                                                                                                                                                         |
-| ただ、ただ雲を見上げても<br><br>視界は今日も流れるまま<br><br>遠く仰いだ夜に花泳ぐ<br><br>春と見紛うほどに<br><br>君をただ見失うように     | tada, tada kumo o miagete mo<br><br>shikai wa kyou mo nagareru mama<br><br>tooku aoida yoru ni hana oyogu<br><br>haru to mimagau hodo ni<br><br>kimi o tada miushinau you ni         | Though I just, I just look up at the clouds<br><br>As usual, they flow through my field of vision<br><br>In the distant night sky I looked up at, flowers swam<br><br>So many that it could be mistaken for spring<br><br>As if I’d just lost sight of you |
-| 転ばないように下を向いた<br><br>人生はどうにも妥協で出来てる<br><br>心も運命もラブソングも人生も信じない<br><br>所詮売れないなら全部が無駄だ      | korobanai you ni shita o muita<br><br>jinsei wa dou ni mo dakyou de dekite’ru<br><br>kokoro mo unmei mo RABU SONGU mo jinsei mo shinjinai<br><br>shosen urenai nara zenbu ga muda da | I looked down so I wouldn’t trip<br><br>Life is made of nothing but compromises<br><br>I don’t believe in hearts or fate or love songs or life<br><br>After all, if you can’t sell something it has no value                                               |
-| わざと零した夢で描いた今に寝そべったままで時効を待っている                                                           | waza to koboshita yume de egaita ima ni nesobetta mama de jikou o matte iru                                                                                                          | I intentionally discarded the present I dreamed of, and now I’m lying here waiting for its expiration date                                                                                                                                                 |
-| ただ、ただ目蓋の裏側<br><br>遠く描く君を見たまま<br><br>ノート、薄い夜隅に花泳ぐ<br><br>僕の目にまた一つ                        | tada, tada mabuta no uragawa<br><br>tooku egaku kimi o mita mama<br><br>NOOTO, usui yasumi ni hana oyogu<br><br>boku no me ni mata hitotsu                                           | Behind my eyelids, I just, I just saw<br><br>An imagined, distant vision of you<br><br>In my notebook, flowers swim in the corner of a faded night<br><br>One more is in my eye                                                                            |
-| 人生は妥協の連続なんだ<br><br>そんなこと疾うにわかってたんだ<br><br>エルマ、君なんだよ<br><br>君だけが僕の音楽なんだ                  | jinsei wa dakyou no renzoku na n’da<br><br>sonna koto tou ni wakatte’ta n’da<br><br>ERUMA, kimi na n’da yo<br><br>kimi dake ga boku no ongaku na n’da                                | Life is just one compromise after another<br><br>I learned that pretty fast<br><br>Elma, it’s you<br><br>You alone are my music                                                                                                                            |
-| この詩はあと八十字<br><br>人生の価値は、終わり方だろうから                                                       | kono uta wa ato hachijuuji<br><br>jinsei no kachi wa, owarikata darou kara                                                                                                           | There are only eighty more characters in this song<br><br>Because maybe the only value of a life is in the way it ends                                                                                                                                     |
-| ただ、ただ君だけを描け<br><br>視界の藍も滲んだまま<br><br>遠く仰いだ空に花泳ぐ<br><br>この目覆う藍二乗                         | tada, tada kimi dake o egake<br><br>shikai no ai mo nijinda mama<br><br>tooku aoida sora ni hana oyogu<br><br>kono me oou ai nijou                                                   | I just, I just picture you<br><br>As even the indigo filling my vision is blurred<br><br>In the distant sky I looked up at, flowers swam<br><br>Deep indigo covers my eyes                                                                                 |
-| ただ、ただ<br><br>遠く仰いだ空、君が涼む<br><br>ただ夜を泳ぐように                                               | tada, tada<br><br>tooku aoida sora, kimi ga suzumu<br><br>tada yoru o oyogu you ni                                                                                                   | It’s just, it’s just…<br><br>In the distant sky I looked up at, you are cooling off<br><br>As if you were just swimming in the night                                                                                                                       |
+| Japanese                                                                                | Romanji                                                                                                                                                                              | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/01/08/yorushika-ai-nijou/)                                                                                                                                                                      | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                                                     |
+| --------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 変わらない風景 浅い正午<br><br>高架下、藍二乗、寝転ぶまま<br><br>白紙の人生に拍手の音が一つ鳴っている<br><br>空っぽな自分を今日も歌っていた      | kawaranai fuukei asai shougo<br><br>kouka shita, ai nijou, nekorobu mama<br><br>hakushi no jinsei ni hakushu no ne ga hitotsu natte iru<br><br>karappo na jibun o kyou mo utatte ita | The scenery doesn’t change; on a faded afternoon<br><br>I’m lying in the deep indigo beneath the overpass<br><br>I hear a single clap for my blank-page life<br><br>I was singing about my own emptiness today, as usual                                   | Phong cảnh nhàm chán giữa một buổi trưa miên man<br><br>Tớ ngả lưng dưới chân cầu vượt, và cậu thì không có ở đây<br><br>Một tiếng vỗ tay vang lên trong cuộc đời tựa trang giấy trắng<br><br>Ngày hôm nay tớ vẫn hát về mình, một kẻ bên trong rỗng tuếch         |
+| 変わらないように<br><br>君が主役のプロットを書くノートの中<br><br>止まったガス水道 世間もニュースも所詮他人事<br><br>この人生さえほら、インクみたいだ | kawaranai you ni<br><br>kimi ga shuyaku no PUROTTO o kaku NOOTO no naka<br><br>tomatta GASU suidou seken mo NYUUSU mo shosen taningoto<br><br>kono jinsei sae hora, INKU mitai da    | So things wouldn’t change,<br><br>I wrote a story starring you in my notebook<br><br>My gas and water being cut off, society, and the news are all someone else’s problem<br><br>Look, my life is like ink                                                 | Vẫn như mọi khi<br><br>Trong cuốn vở viết câu chuyện mà cậu là nhân vật chính<br><br>Điện nước đều bị cắt<br>Thế gian và thời sự, tất cả đều là việc của người dưng<br><br>Cả cuộc đời này là của tớ, cũng chỉ như mực trên giấy mà thôi                           |
+| あの頃ずっと頭に描いた夢も大人になるほど時効になっていく                                                            | ano koro zutto atama ni egaita yume mo otona ni naru hodo jikou ni natte iku                                                                                                         | The dream I had when I was young gets closer to its expiration date as I get older                                                                                                                                                                         | Cả giấc mơ mà tớ vẽ ra trong đầu suốt dạo đó<br>Thời hiệu[[#^1]] của nó kéo dài đến tận khi tớ đã lớn lên                                                                                                                                                          |
+| ただ、ただ雲を見上げても<br><br>視界は今日も流れるまま<br><br>遠く仰いだ夜に花泳ぐ<br><br>春と見紛うほどに<br><br>君をただ見失うように     | tada, tada kumo o miagete mo<br><br>shikai wa kyou mo nagareru mama<br><br>tooku aoida yoru ni hana oyogu<br><br>haru to mimagau hodo ni<br><br>kimi o tada miushinau you ni         | Though I just, I just look up at the clouds<br><br>As usual, they flow through my field of vision<br><br>In the distant night sky I looked up at, flowers swam<br><br>So many that it could be mistaken for spring<br><br>As if I’d just lost sight of you | Dù chỉ là ngước lên nhìn một đám mây<br><br>Ánh mắt của tớ ngày hôm nay vẫn trôi về một nơi xa<br><br>Trong màn đêm tớ ngước nhìn về xa xăm, một bông hoa đang bơi trên bầu trời<br><br>Như thể tớ đã lạc mất cậu<br><br>Đến mức nhầm lẫn bông hoa đó với mùa xuân |
+| 転ばないように下を向いた<br><br>人生はどうにも妥協で出来てる<br><br>心も運命もラブソングも人生も信じない<br><br>所詮売れないなら全部が無駄だ      | korobanai you ni shita o muita<br><br>jinsei wa dou ni mo dakyou de dekite’ru<br><br>kokoro mo unmei mo RABU SONGU mo jinsei mo shinjinai<br><br>shosen urenai nara zenbu ga muda da | I looked down so I wouldn’t trip<br><br>Life is made of nothing but compromises<br><br>I don’t believe in hearts or fate or love songs or life<br><br>After all, if you can’t sell something it has no value                                               | Tớ nhìn xuống dưới để không bị vấp ngã<br><br>Cuộc đời này chỉ cần thỏa hiệp là đã yên ổn rồi<br><br>Trái tim, vận mệnh, tình ca, cuộc đời, tớ đều không tin<br><br>Những thứ không bán đi được đều là đồ bỏ                                                       |
+| わざと零した夢で描いた今に寝そべったままで時効を待っている                                                           | waza to koboshita yume de egaita ima ni nesobetta mama de jikou o matte iru                                                                                                          | I intentionally discarded the present I dreamed of, and now I’m lying here waiting for its expiration date                                                                                                                                                 | Qua bao đêm dài cố tình ru mình vào giấc mộng<br>Giờ đây tớ vẫn đang vật vờ chờ đợi thời hiệu kết thúc                                                                                                                                                             |
+| ただ、ただ目蓋の裏側<br><br>遠く描く君を見たまま<br><br>ノート、薄い夜隅に花泳ぐ<br><br>僕の目にまた一つ                        | tada, tada mabuta no uragawa<br><br>tooku egaku kimi o mita mama<br><br>NOOTO, usui yasumi ni hana oyogu<br><br>boku no me ni mata hitotsu                                           | Behind my eyelids, I just, I just saw<br><br>An imagined, distant vision of you<br><br>In my notebook, flowers swim in the corner of a faded night<br><br>One more is in my eye                                                                            | Chỉ là phía sau bờ mi của tớ<br><br>Tớ vẫn chỉ thấy hình bóng cậu hiện lên xa xăm<br><br>Trong cuốn vở, nơi một góc đêm nhạt nhòa, một bông hoa đang bơi trên bầu trời<br><br>Tất cả trong mắt tớ đều là một                                                       |
+| 人生は妥協の連続なんだ<br><br>そんなこと疾うにわかってたんだ<br><br>エルマ、君なんだよ<br><br>君だけが僕の音楽なんだ                  | jinsei wa dakyou no renzoku na n’da<br><br>sonna koto tou ni wakatte’ta n’da<br><br>ERUMA, kimi na n’da yo<br><br>kimi dake ga boku no ongaku na n’da                                | Life is just one compromise after another<br><br>I learned that pretty fast<br><br>Elma, it’s you<br><br>You alone are my music                                                                                                                            | Cuộc đời là một chuỗi những thỏa hiệp<br><br>Chuyện đó tớ đã thấu từ thuở nào rồi<br><br>Elma, chính là cậu đó<br><br>Chỉ có cậu mới là âm nhạc của tớ                                                                                                             |
+| この詩はあと八十字<br><br>人生の価値は、終わり方だろうから                                                       | kono uta wa ato hachijuuji<br><br>jinsei no kachi wa, owarikata darou kara                                                                                                           | There are only eighty more characters in this song<br><br>Because maybe the only value of a life is in the way it ends                                                                                                                                     | Bài hát này chỉ còn 80 chữ nữa thôi<br><br>Bởi vì giá trị của cuộc đời này chính là cách để kết thúc bài hát                                                                                                                                                       |
+| ただ、ただ君だけを描け<br><br>視界の藍も滲んだまま<br><br>遠く仰いだ空に花泳ぐ<br><br>この目覆う藍二乗                         | tada, tada kimi dake o egake<br><br>shikai no ai mo nijinda mama<br><br>tooku aoida sora ni hana oyogu<br><br>kono me oou ai nijou                                                   | I just, I just picture you<br><br>As even the indigo filling my vision is blurred<br><br>In the distant sky I looked up at, flowers swam<br><br>Deep indigo covers my eyes                                                                                 | Chỉ vẽ lên hình bóng cậu thôi<br><br>Sắc chàm trong ánh mắt tớ đã thấm nhòe trang giấy rồi<br><br>Trên màn đêm tớ ngước nhìn xa xăm, một bông hoa bơi trên bầu trời<br><br>Nỗi buồn không có cậu che phủ đôi mắt tớ                                                |
+| ただ、ただ<br><br>遠く仰いだ空、君が涼む<br><br>ただ夜を泳ぐように                                               | tada, tada<br><br>tooku aoida sora, kimi ga suzumu<br><br>tada yoru o oyogu you ni                                                                                                   | It’s just, it’s just…<br><br>In the distant sky I looked up at, you are cooling off<br><br>As if you were just swimming in the night                                                                                                                       | Chỉ là, chỉ là...<br><br>Nơi bầu trời tớ ngước nhìn xa xăm, cậu hiện lên thật tự tại<br><br>Như đang bơi trong màn đêm                                                                                                                                             |
 ##### Notes
 >A more literal translation of the title would be “Indigo Squared.” The word for “indigo,” 藍/ai, sounds like the number “i,”; i2 is -1. It’s also homophonous with 愛 (love) and 哀 (grief). [In an interview](https://optimanotes.com/archives/8257), n-buna confirmed the i2 interpretation and said that the title also refers to the scenery appearing doubled because the protagonist’s vision is blurred by tears. ^title
+
+> Thời hiệu: qua một khoảng thời gian một nghi vấn sẽ được công nhận là sự thật nếu không được xác minh, giấc mơ có thời hiệu kéo dài đến tận khi trưởng thành nghĩa là nó vẫn chưa trở thành hiện thực ^1
 
 #### MV Notes
 The visible text in the MV at 2:32, shown for less than a second.
