--- a/(2019) That's Why I Gave Up On Music/04. Songwriting and Coffee.md
+++ b/(2019) That's Why I Gave Up On Music/04. Songwriting and Coffee.md
@@ -4,18 +4,18 @@ await dv.view('_script');
 詩書きとコーヒー | Shikaki to Koohii
 #### Lyrics
 
-| Japanese                                                                                                                                                                  | Romanji                                                                                                                                                                                                                                                                                  | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/04/11/yorushika-shigaki-to-koohii/)                                                                                                                                                                                                                                                                                                   |
-| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 最低限の生活で小さな部屋の六畳で<br><br>君と暮らせれば良かった　それだけ考えていた<br><br>幸せの色は準透明　なら見えない方が良かった<br><br>何も出来ないのに今日が終わる                                                                          | saiteigen no seikatsu de chiisa na heya no rokujou de<br><br>kimi to kurasereba yokatta sore dake kangaete ita<br><br>shiawase no iro wa juntoumei nara mienai hou ga yokatta<br><br>nani mo dekinai no ni kyou ga owaru                                                                 | In my bare-minimum life, in my tiny six-tatami-mat apartment<br><br>All I could think about was that I wished I could live with you<br><br>If the color of happiness is semi-transparent, then I wish I’d never seen it<br><br>Even though I haven’t been able to do anything, today comes to an end                                                                                             |
-| 最低限の生活で小さな部屋の六畳で<br><br>天井を眺める毎日　何かを考えていた<br><br>幸せの価値は60000円<br><br>家賃が引かれて4000円<br><br>ぼやけた頭で想い出を漁る                                                                     | saiteigen no seikatsu de chiisa na heya no rokujou de<br><br>tenjou o nagameru mainichi nanika o kangaete ita<br><br>shiawase no kachi wa rokuman’en<br><br>yachin ga hikarete yonsen’en<br><br>boyaketa atama de omoide o asaru                                                         | In my bare-minimum life, in my tiny six-tatami-mat apartment<br><br>Every day I was staring at the ceiling thinking about something<br><br>The price of happiness is [60,000 yen](https://www.google.com/search?q=60000+yen+to+usd)<br><br>After rent I’ve only got [4,000 yen](https://www.google.com/search?q=4000+yen+to+usd) left<br><br>I go scrounging in my blurred thoughts for memories |
-| 冷めた目で愛を語るようになっていた<br><br>冷めたコーヒーも相変わらずそうなんだ<br><br>嫌いだ                                                                                                                    | sameta me de ai o kataru you ni natte ita<br><br>sameta KOOHII mo aikawarazu sou nan’da<br><br>kirai da                                                                                                                                                                                  | I’ve become able to talk about love with cold cynicism<br><br>My coffee is always cold, too<br><br>I hate it                                                                                                                                                                                                                                                                                     |
-| わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>想い出になる　君が邪魔になっていく<br><br>わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>わかんないよ<br><br>上手な歩き方も<br><br>さよならの言い方も                       | wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>omoide ni naru kimi ga jama ni natte iku<br><br>wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>wakannai yo<br><br>jouzu na arukikata mo<br><br>sayonara no iikata mo                                        | I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get<br><br>How you can have become a memory and keep on getting in my way<br><br>I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get it<br><br>I don’t know<br><br>The right way to walk<br><br>Or how to say goodbye                                                                                                |
-| 最小限の音量で　少し大きくなった部屋で<br><br>止まったガスも思い出もシャワーの冷たさも書き殴った<br><br>寿命を売るなら残り二年<br><br>それだけ残してあの街へ<br><br>余った寿命で思い出を漁る                                                            | saishougen no onryou de sukoshi ookiku natta heya de<br><br>tomatta GASU mo omoide mo SHAWAA no tsumetasa mo kakinagutta<br><br>jumyou o uru nara nokori ninen<br><br>sore dake nokoshite ano machi e<br><br>amatta jumyou de omoide o asaru                                             | At the lowest possible volume, in my slightly bigger apartment<br><br>I scribble down lyrics about the cut-off gas, my memories, and how cold the shower is<br><br>If I’m selling my lifespan, I only have two years left<br><br>If that’s all that’s left, I’d like to go to that town<br><br>And spend my remaining life scrounging for memories                                               |
-| 晴れも夜祭りも関町の街灯も<br><br>雲も逃げ水も斜に構えた歌詞観も<br><br>詭弁だ                                                                                                                           | hare mo yomatsuri mo Sekimachi no gaitou mo<br><br>kumo mo nigemizu mo sha ni kamaeta kashikan mo<br><br>kiben da                                                                                                                                                                        | Sunny days and night festivals and the streetlights of Sekimachi<br><br>And clouds and mirages and the cynical outlook of my lyrics–<br><br>They’re all sophistry                                                                                                                                                                                                                                |
-| わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>想い出になる　君が詩に成っていく<br><br>わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>わかんないよ、忘れられる方法も<br><br>これからの使い方も                              | wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>omoide ni naru kimi ga uta ni natte iku<br><br>wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>wakannai yo, wasurerareru houhou mo<br><br>kore kara no tsukaikata mo                                         | I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get<br><br>How you can have become a memory and keep on showing up in my songs<br><br>I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get it<br><br>I don’t get how things get forgotten<br><br>Or know how to use my time from now on                                                                               |
-| 冷めた目の中で君の詩を書いていた<br><br>僕のこの日々は君の為の人生だ                                                                                                                                    | sameta me no naka de kimi no uta o kaite ita<br><br>boku no kono hibi wa kimi no tame no jinsei da                                                                                                                                                                                       | With my cold, cynical eyes, I was writing a song about you<br><br>I’m living my days now for your sake                                                                                                                                                                                                                                                                                           |
-| 夢も儚さも君の口も目もその指先も忘れながら<br><br>ほら、そろそろ詩も終わる時間だ                                                                                                                              | yume mo hakanasa mo kimi no kuchi mo me mo sono yubisaki mo wasurenagara<br><br>hora, sorosoro uta mo owaru jikan da                                                                                                                                                                     | As I’m forgetting my dreams and how ephemeral things are and your mouth and eyes and fingertips<br><br>Look, soon it’ll be time for my songs to come to an end                                                                                                                                                                                                                                   |
-| やっと君の番だからさ                                                                                                                                                                | yatto kimi no ban dakara sa                                                                                                                                                                                                                                                              | Because it’s finally your turn now                                                                                                                                                                                                                                                                                                                                                               |
-| わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>想い出になれ　君よ詩に成って往け<br><br>わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>わかんないね<br><br>人は歩けるんだとか<br><br>それが当たり前だとかわかんないさ<br><br>わかんないよ | wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>omoide ni nare kimi yo uta ni natte ike<br><br>wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>wakannai ne<br><br>hito wa arukeru n’da to ka<br><br>sore ga atarimae da to ka wakannai sa<br><br>wakannai yo | I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get it<br><br>You must become a memory, become a song<br><br>I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get it<br><br>I don’t get, you know,<br><br>How it is that people can keep walking<br><br>Or how they can act like it’s the most natural thing in the world<br><br>I don’t get it at all                |
+| Japanese                                                                                                                                                                  | Romanji                                                                                                                                                                                                                                                                                  | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/04/11/yorushika-shigaki-to-koohii/)                                                                                                                                                                                                                                                                                                   | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                                                                                                                                                                                          |
+| ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 最低限の生活で小さな部屋の六畳で<br><br>君と暮らせれば良かった　それだけ考えていた<br><br>幸せの色は準透明　なら見えない方が良かった<br><br>何も出来ないのに今日が終わる                                                                          | saiteigen no seikatsu de chiisa na heya no rokujou de<br><br>kimi to kurasereba yokatta sore dake kangaete ita<br><br>shiawase no iro wa juntoumei nara mienai hou ga yokatta<br><br>nani mo dekinai no ni kyou ga owaru                                                                 | In my bare-minimum life, in my tiny six-tatami-mat apartment<br><br>All I could think about was that I wished I could live with you<br><br>If the color of happiness is semi-transparent, then I wish I’d never seen it<br><br>Even though I haven’t been able to do anything, today comes to an end                                                                                             | Giá mà có thể cùng sống với cậu<br><br>Một cuộc sống tối giản trong căn phòng sáu chiếu<br>Tớ chỉ nghĩ về điều đó mà thôi<br><br>Màu của hạnh phúc là màu dần ngả sang trong suốt<br>Nếu vậy thì tớ thà không nhìn thấy nó còn hơn<br><br>Hôm nay vẫn trôi đi mà tớ chẳng làm được gì cả                                                                                                                |
+| 最低限の生活で小さな部屋の六畳で<br><br>天井を眺める毎日　何かを考えていた<br><br>幸せの価値は60000円<br><br>家賃が引かれて4000円<br><br>ぼやけた頭で想い出を漁る                                                                     | saiteigen no seikatsu de chiisa na heya no rokujou de<br><br>tenjou o nagameru mainichi nanika o kangaete ita<br><br>shiawase no kachi wa rokuman’en<br><br>yachin ga hikarete yonsen’en<br><br>boyaketa atama de omoide o asaru                                                         | In my bare-minimum life, in my tiny six-tatami-mat apartment<br><br>Every day I was staring at the ceiling thinking about something<br><br>The price of happiness is [60,000 yen](https://www.google.com/search?q=60000+yen+to+usd)<br><br>After rent I’ve only got [4,000 yen](https://www.google.com/search?q=4000+yen+to+usd) left<br><br>I go scrounging in my blurred thoughts for memories | Mỗi ngày tớ đều nhìn lên trần nhà<br><br>Một cuộc sống tối giản trong căn phòng sáu chiếu<br>Tớ suy nghĩ về điều gì đó<br><br>Hạnh phúc có giá 60.000 yên<br><br>trừ đi tiền nhà thì còn 4000 yên<br><br>Đầu óc tớ mờ nhạt đi lục tìm những ký ức                                                                                                                                                       |
+| 冷めた目で愛を語るようになっていた<br><br>冷めたコーヒーも相変わらずそうなんだ<br><br>嫌いだ                                                                                                                    | sameta me de ai o kataru you ni natte ita<br><br>sameta KOOHII mo aikawarazu sou nan’da<br><br>kirai da                                                                                                                                                                                  | I’ve become able to talk about love with cold cynicism<br><br>My coffee is always cold, too<br><br>I hate it                                                                                                                                                                                                                                                                                     | Tớ đã có thể kể về những chuyện tình bằng đôi mắt bâng quơ<br><br>Còn tách cà phê nguội thì vẫn thế<br><br>tớ vẫn ghét nó                                                                                                                                                                                                                                                                               |
+| わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>想い出になる　君が邪魔になっていく<br><br>わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>わかんないよ<br><br>上手な歩き方も<br><br>さよならの言い方も                       | wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>omoide ni naru kimi ga jama ni natte iku<br><br>wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>wakannai yo<br><br>jouzu na arukikata mo<br><br>sayonara no iikata mo                                        | I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get<br><br>How you can have become a memory and keep on getting in my way<br><br>I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get it<br><br>I don’t know<br><br>The right way to walk<br><br>Or how to say goodbye                                                                                                | Tớ không biết, không biết đâu<br><br>Tớ không biết, thật sự không biết đâu<br><br>Người con gái sẽ trở thành kỉ niệm của tớ sao thật phiền phức quá<br><br>Tớ không biết, không biết đâu<br><br>Tớ không biết, thật sự không biết đâu<br><br>thật sự không hiểu nổi đâu<br><br>Cả cách đi uyển chuyển cũng thế<br><br>cả cách nói lời tạm biệt cũng thế                                                 |
+| 最小限の音量で　少し大きくなった部屋で<br><br>止まったガスも思い出もシャワーの冷たさも書き殴った<br><br>寿命を売るなら残り二年<br><br>それだけ残してあの街へ<br><br>余った寿命で思い出を漁る                                                            | saishougen no onryou de sukoshi ookiku natta heya de<br><br>tomatta GASU mo omoide mo SHAWAA no tsumetasa mo kakinagutta<br><br>jumyou o uru nara nokori ninen<br><br>sore dake nokoshite ano machi e<br><br>amatta jumyou de omoide o asaru                                             | At the lowest possible volume, in my slightly bigger apartment<br><br>I scribble down lyrics about the cut-off gas, my memories, and how cold the shower is<br><br>If I’m selling my lifespan, I only have two years left<br><br>If that’s all that’s left, I’d like to go to that town<br><br>And spend my remaining life scrounging for memories                                               | Mở âm lượng nhỏ nhất, trong một căn phòng lớn hơn một chút<br><br>Tớ nguệch ngoạc viết về chuyện điện nước bị cắt, kỷ niệm và nước tắm lạnh ngắt<br><br>Nếu bán đi tuổi thọ của mình thì tớ chỉ còn 2 năm<br><br>Tớ để hết lại và đi đến thành phố đó<br><br>dùng phần đời còn lại lục tìm ký ức                                                                                                        |
+| 晴れも夜祭りも関町の街灯も<br><br>雲も逃げ水も斜に構えた歌詞観も<br><br>詭弁だ                                                                                                                           | hare mo yomatsuri mo Sekimachi no gaitou mo<br><br>kumo mo nigemizu mo sha ni kamaeta kashikan mo<br><br>kiben da                                                                                                                                                                        | Sunny days and night festivals and the streetlights of Sekimachi<br><br>And clouds and mirages and the cynical outlook of my lyrics–<br><br>They’re all sophistry                                                                                                                                                                                                                                | Trời nắng, lễ hội ban đêm, đèn đường ở Seki<br><br>đám mây, dòng nước chảy, quan điểm viết nhạc đã quá ổn định,<br><br>tất cả đều là nguỵ biện                                                                                                                                                                                                                                                          |
+| わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>想い出になる　君が詩に成っていく<br><br>わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>わかんないよ、忘れられる方法も<br><br>これからの使い方も                              | wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>omoide ni naru kimi ga uta ni natte iku<br><br>wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>wakannai yo, wasurerareru houhou mo<br><br>kore kara no tsukaikata mo                                         | I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get<br><br>How you can have become a memory and keep on showing up in my songs<br><br>I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get it<br><br>I don’t get how things get forgotten<br><br>Or know how to use my time from now on                                                                               | Tớ không biết, không biết đâu<br><br>Tớ không biết, thật sự không biết đâu<br><br>Người con gái sẽ trở thành kỉ niệm của tớ đang hoá thành lời ca<br><br>Tớ không biết, không biết đâu<br><br>Tớ không biết, thật sự không biết đâu<br><br>Không biết đâu, cả cái cách để bị lãng quên cũng thế<br><br>cái cách dùng cuộc đời tớ từ bây giờ cũng thế                                                    |
+| 冷めた目の中で君の詩を書いていた<br><br>僕のこの日々は君の為の人生だ                                                                                                                                    | sameta me no naka de kimi no uta o kaite ita<br><br>boku no kono hibi wa kimi no tame no jinsei da                                                                                                                                                                                       | With my cold, cynical eyes, I was writing a song about you<br><br>I’m living my days now for your sake                                                                                                                                                                                                                                                                                           | Tớ viết về cậu bằng một ánh mắt bâng quơ<br><br>Những tháng ngày này của tớ là cuộc đời sống vì cậu đó                                                                                                                                                                                                                                                                                                  |
+| 夢も儚さも君の口も目もその指先も忘れながら<br><br>ほら、そろそろ詩も終わる時間だ                                                                                                                              | yume mo hakanasa mo kimi no kuchi mo me mo sono yubisaki mo wasurenagara<br><br>hora, sorosoro uta mo owaru jikan da                                                                                                                                                                     | As I’m forgetting my dreams and how ephemeral things are and your mouth and eyes and fingertips<br><br>Look, soon it’ll be time for my songs to come to an end                                                                                                                                                                                                                                   | Khi đang quên đi ước mơ, sự mong manh, mắt, miệng, cả ngón tay của cậu<br><br>Xem kìa, đã đến lúc bài hát này phải kết thúc rồi                                                                                                                                                                                                                                                                         |
+| やっと君の番だからさ                                                                                                                                                                | yatto kimi no ban dakara sa                                                                                                                                                                                                                                                              | Because it’s finally your turn now                                                                                                                                                                                                                                                                                                                                                               | Cuối cùng cũng đến lượt cậu rồi                                                                                                                                                                                                                                                                                                                                                                         |
+| わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>想い出になれ　君よ詩に成って往け<br><br>わかんないよ　わかんないよ<br><br>わかんないよ　わかんないよ<br><br>わかんないね<br><br>人は歩けるんだとか<br><br>それが当たり前だとかわかんないさ<br><br>わかんないよ | wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>omoide ni nare kimi yo uta ni natte ike<br><br>wakannai yo wakannai yo<br><br>wakannai yo wakannai yo<br><br>wakannai ne<br><br>hito wa arukeru n’da to ka<br><br>sore ga atarimae da to ka wakannai sa<br><br>wakannai yo | I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get it<br><br>You must become a memory, become a song<br><br>I don’t get it, I don’t get it<br><br>I don’t get it, I don’t get it<br><br>I don’t get, you know,<br><br>How it is that people can keep walking<br><br>Or how they can act like it’s the most natural thing in the world<br><br>I don’t get it at all                | Tớ không biết, không biết đâu<br><br>Tớ không biết, thật sự không biết đâu<br><br>Hãy trở thành kỷ niệm đi! Cậu đó, hãy hoá thành lời ca đi!<br><br>Tớ không biết, không biết đâu<br><br>Tớ không biết, thật sự không biết đâu<br><br>Không thể hiểu được đâu phải không?<br><br>Chuyện con người có thể bước đi<br><br>hay điều đó là hiển nhiên, tớ đều không để tâm<br><br>Tớ không biết gì hết đâu. |
 ##### Notes
 >
