--- a/(2019) That's Why I Gave Up On Music/06. Let's Dance.md
+++ b/(2019) That's Why I Gave Up On Music/06. Let's Dance.md
@@ -1,19 +1,19 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-踊ろうぜ | Odorouze
+踊ろうぜ | Odorouze | Nhảy múa đi nào
 #### Lyrics
 
-| Japanese                                                                                                                          | Romanji                                                                                                                                                                                                                                                              | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/05/12/yorushika-odorou-ze/)                                                                                                                                                                                                                     |
-| --------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 嗚呼、透明よりも澄み切った心で<br><br>世の中を笑っているんだよ<br><br>嗚呼、音楽なんかを選んだ<br><br>あの日の自分を馬鹿に思うね                                                      | aa, toumei yori mo sumikitta kokoro de<br><br>yo no naka o waratte iru n’da yo<br><br>aa, ongaku nanka o eranda<br><br>ano hi no jibun o baka ni omou ne                                                                                                             | Ah, with a heart that’s clearer than transparent,<br><br>I’m laughing at the world<br><br>Ah, thinking back to when I chose music<br><br>I feel I was such an idiot then                                                                                                                                   |
-| 伝えたい全部はもう<br><br>この詩も自分の声すらも                                                                                                      | tsutaetai zenbu wa mou<br><br>kono uta mo jibun no koe sura mo                                                                                                                                                                                                       | Everything I want to tell you–<br><br>This song, even my voice–                                                                                                                                                                                                                                            |
-| 風になったから　泡と消えていったから<br><br>共感覚みたいこの感傷は何処かへ投げ捨てたい<br><br>僕でいいのなら　君が知りたいのなら<br><br>もう隠すことなんてないよ<br><br>今から少しだけ踊ろうぜ                   | kaze ni natta kara awa to kiete itta kara<br><br>kyoukankaku mitai kono kanshou wa dokoka e nagesutetai<br><br>boku de ii no nara kimi ga shiritai no nara<br><br>mou kakusu koto nante nai yo<br><br>ima kara sukoshi dake odorou ze                                | Has turned into the wind and vanished with the bubbles<br><br>So I want to throw away this synesthesia-like sentiment<br><br>If it’s okay for me to do this, if you want to know,<br><br>I won’t hide anything anymore<br><br>From now on I’ll dance just a little                                         |
-| 嗚呼、人間なんて辞めたいな<br><br>そうだろ、面白くも何にもないだろ<br><br>嗚呼、自慢のギターを見せびらかした<br><br>あの日の自分を潰してやりたいよ                                             | aa, ningen nante yametai na<br><br>sou daro, omoshiroku mo nani mo nai daro<br><br>aa, jiman no GITAA o misebirakashita<br><br>ano hi no jibun o tsubushite yaritai yo                                                                                               | Ah, I want to give up on being human<br><br>That’s right, nothing holds any interest for me anymore<br><br>Ah, thinking back on when I showed off that guitar I was so proud of<br><br>I want to crush the person I was back then                                                                          |
-| 伝えたい全部はもう<br><br>夏も冬も明日の向こう側で                                                                                                     | tsutaetai zenbu wa mou<br><br>natsu mo fuyu mo asu no mukougawa de                                                                                                                                                                                                   | Everything I want to tell you–<br><br>The summer, the winter — beyond tomorrow                                                                                                                                                                                                                             |
-| 灰になったから　淡く消え去ったから<br><br>疾うに失くしてたこの情動も何処かへ投げ捨てて<br><br>君がいいのなら　ただ忘れたいのなら<br><br>もう躊躇うことなんてないよ<br><br>このまま夜明けまで踊ろうぜ                | hai ni natta kara awaku kiesatta kara<br><br>tou ni nakushite’ta kono joudou mo dokoka e nagesutete<br><br>kimi ga ii no nara tada wasuretai no nara<br><br>mou tamerau koto nante nai yo<br><br>kono mama yoake made odorou ze                                      | It’s all become ash and disappeared in an instant<br><br>So I’m throwing away this emotion I lost long ago<br><br>If it’s okay with you, if you just want to forget<br><br>I won’t hesitate anymore<br><br>I’ll dance like this until dawn                                                                 |
-| 嗚呼、音楽なんか辞めてやるのさ<br><br>思い出の君が一つも違わず描けたら<br><br>どうせもうやりたいこと一つ言えないからさ<br><br>浮かばないからさ                                               | aa, ongaku nanka yamete yaru no sa<br><br>omoide no kimi ga hitotsu mo tagawazu kaketara<br><br>douse mou yaritai koto hitotsu ienai kara sa<br><br>ukabanai kara sa                                                                                                 | Ah, I’ve given up on music<br><br>If I write about you just as you were in my memory, with no changes at all,<br><br>Then there won’t be a single thing left that I want to do<br><br>Nothing comes to mind                                                                                                |
-| 君を知ったまま　日々が過ぎ去ったから<br><br>どうか追いつきたいこの情動をこのまま歌にしたい<br><br>今が苦しいならさ　言い訳はいいからさ<br><br>あぁもう、踊ろうぜほら                                    | kimi o shitta mama hibi ga sugisatta kara<br><br>douka oitsukitai kono joudou o kono mama uta ni shitai<br><br>ima ga kurushii nara sa iiwake wa ii kara sa<br><br>aa mou, odorou ze hora                                                                            | Because the days when I knew you are past<br><br>Somehow I want to capture this emotion I want to catch up with in a song<br><br>If my life now is painful, because I’ve had enough of the excuses,<br><br>Ah, well, I’ll dance — look                                                                     |
-| 風になったのさ　泡と消えていったのさ<br><br>どうせ割り切れないこの感傷も何処かへ投げ捨てて<br><br>僕でいいのなら　君が知りたいのなら<br><br>もう隠すことなんてないよ<br><br>今から少しだけ<br><br>このまま少しだけ踊ろうぜ | kaze ni natta no sa awa to kiete itta no sa<br><br>douse warikirenai kono kanshou mo dokoka e nagesutete<br><br>boku de ii no nara kimi ga shiritai no nara<br><br>mou kakusu koto nante nai yo<br><br>ima kara sukoshi dake<br><br>kono mama sukoshi dake odorou ze | It’s become the wind, it’s vanished with the bubbles<br><br>No matter what, I’ll throw away this sensation I can’t explain<br><br>If it’s okay for me to do this, if you want to know,<br><br>I won’t hide anything anymore<br><br>From now on, just a little,<br><br>Like this, just a little, I’ll dance |
+| Japanese                                                                                                                          | Romanji                                                                                                                                                                                                                                                              | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/05/12/yorushika-odorou-ze/)                                                                                                                                                                                                                     | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                                                                             |
+| --------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 嗚呼、透明よりも澄み切った心で<br><br>世の中を笑っているんだよ<br><br>嗚呼、音楽なんかを選んだ<br><br>あの日の自分を馬鹿に思うね                                                      | aa, toumei yori mo sumikitta kokoro de<br><br>yo no naka o waratte iru n’da yo<br><br>aa, ongaku nanka o eranda<br><br>ano hi no jibun o baka ni omou ne                                                                                                             | Ah, with a heart that’s clearer than transparent,<br><br>I’m laughing at the world<br><br>Ah, thinking back to when I chose music<br><br>I feel I was such an idiot then                                                                                                                                   | Ah, tớ đang cười vào sự đời, bằng một trái tim trong suốt hơn cả xuyên thấu<br><br>Ah, tớ thấy bản thân tớ thật ngu ngốc, khi ngày đó đã lựa chọn âm nhạc                                                                                                                                  |
+| 伝えたい全部はもう<br><br>この詩も自分の声すらも                                                                                                      | tsutaetai zenbu wa mou<br><br>kono uta mo jibun no koe sura mo                                                                                                                                                                                                       | Everything I want to tell you–<br><br>This song, even my voice–                                                                                                                                                                                                                                            | Tất cả những điều tớ muốn nói, cả bài hát này, cả bản thân tớ và cẩ giọng nói này                                                                                                                                                                                                          |
+| 風になったから　泡と消えていったから<br><br>共感覚みたいこの感傷は何処かへ投げ捨てたい<br><br>僕でいいのなら　君が知りたいのなら<br><br>もう隠すことなんてないよ<br><br>今から少しだけ踊ろうぜ                   | kaze ni natta kara awa to kiete itta kara<br><br>kyoukankaku mitai kono kanshou wa dokoka e nagesutetai<br><br>boku de ii no nara kimi ga shiritai no nara<br><br>mou kakusu koto nante nai yo<br><br>ima kara sukoshi dake odorou ze                                | Has turned into the wind and vanished with the bubbles<br><br>So I want to throw away this synesthesia-like sentiment<br><br>If it’s okay for me to do this, if you want to know,<br><br>I won’t hide anything anymore<br><br>From now on I’ll dance just a little                                         | Đều đã biến thành gió, tan đi cùng bọt biển<br><br>Cái tính tự mình đa cảm mà tớ gọi là sự đồng cảm này, thật muốn ném quách đi đâu đó<br><br>Nếu cậu chấp nhận tớ, nếu cậu muốn biết về tớ, thì tớ sẽ không trốn tránh nữa<br><br>Giờ đây tớ sẽ nhảy múa cho cậu xem.                     |
+| 嗚呼、人間なんて辞めたいな<br><br>そうだろ、面白くも何にもないだろ<br><br>嗚呼、自慢のギターを見せびらかした<br><br>あの日の自分を潰してやりたいよ                                             | aa, ningen nante yametai na<br><br>sou daro, omoshiroku mo nani mo nai daro<br><br>aa, jiman no GITAA o misebirakashita<br><br>ano hi no jibun o tsubushite yaritai yo                                                                                               | Ah, I want to give up on being human<br><br>That’s right, nothing holds any interest for me anymore<br><br>Ah, thinking back on when I showed off that guitar I was so proud of<br><br>I want to crush the person I was back then                                                                          | Ah, tớ chẳng còn muốn làm người nữa<br><br>Đúng không, chẳng có cái gì hay ho cả<br><br>Ah, tớ muốn phá huỷ bản thân tớ <br><br>Khi ngày đó đã khoe khoang cây ghita mình tự mãn                                                                                                           |
+| 伝えたい全部はもう<br><br>夏も冬も明日の向こう側で                                                                                                     | tsutaetai zenbu wa mou<br><br>natsu mo fuyu mo asu no mukougawa de                                                                                                                                                                                                   | Everything I want to tell you–<br><br>The summer, the winter — beyond tomorrow                                                                                                                                                                                                                             | Vì tất cả những điều tớ muốn nói, cả mùa hè và mùa đông, cả rìa bên kia của ngày mai                                                                                                                                                                                                       |
+| 灰になったから　淡く消え去ったから<br><br>疾うに失くしてたこの情動も何処かへ投げ捨てて<br><br>君がいいのなら　ただ忘れたいのなら<br><br>もう躊躇うことなんてないよ<br><br>このまま夜明けまで踊ろうぜ                | hai ni natta kara awaku kiesatta kara<br><br>tou ni nakushite’ta kono joudou mo dokoka e nagesutete<br><br>kimi ga ii no nara tada wasuretai no nara<br><br>mou tamerau koto nante nai yo<br><br>kono mama yoake made odorou ze                                      | It’s all become ash and disappeared in an instant<br><br>So I’m throwing away this emotion I lost long ago<br><br>If it’s okay with you, if you just want to forget<br><br>I won’t hesitate anymore<br><br>I’ll dance like this until dawn                                                                 | Đều đã biến thành tro bụi, tan biến đi mơ hồ<br><br>Những hỉ nộ ái ố mà tớ đã đánh mất từ lâu, tớ cũng sẽ đem vứt hết<br><br>Nếu tớ không cần cậu nữa, nếu tớ muốn quên đi, vậy thì tớ sẽ không chần chừ gì nữa<br><br>Tớ sẽ nhảy múa cho đến khi bình minh lên                            |
+| 嗚呼、音楽なんか辞めてやるのさ<br><br>思い出の君が一つも違わず描けたら<br><br>どうせもうやりたいこと一つ言えないからさ<br><br>浮かばないからさ                                               | aa, ongaku nanka yamete yaru no sa<br><br>omoide no kimi ga hitotsu mo tagawazu kaketara<br><br>douse mou yaritai koto hitotsu ienai kara sa<br><br>ukabanai kara sa                                                                                                 | Ah, I’ve given up on music<br><br>If I write about you just as you were in my memory, with no changes at all,<br><br>Then there won’t be a single thing left that I want to do<br><br>Nothing comes to mind                                                                                                | Ah, tớ sẽ từ bỏ âm nhạc đi thôi<br><br>Nếu làm thế có thể vẽ ra cậu không khác một nét nào so với ký ức<br><br>Đằng nào tớ cũng không biết mình còn muốn làm gì khác nữa<br><br>Tớ không nghĩ ra được gì cả                                                                                |
+| 君を知ったまま　日々が過ぎ去ったから<br><br>どうか追いつきたいこの情動をこのまま歌にしたい<br><br>今が苦しいならさ　言い訳はいいからさ<br><br>あぁもう、踊ろうぜほら                                    | kimi o shitta mama hibi ga sugisatta kara<br><br>douka oitsukitai kono joudou o kono mama uta ni shitai<br><br>ima ga kurushii nara sa iiwake wa ii kara sa<br><br>aa mou, odorou ze hora                                                                            | Because the days when I knew you are past<br><br>Somehow I want to capture this emotion I want to catch up with in a song<br><br>If my life now is painful, because I’ve had enough of the excuses,<br><br>Ah, well, I’ll dance — look                                                                     | Ngày tháng trôi đi khi cậu vẫn còn trong tâm trí tớ<br><br>Những hỉ nộ ái ố mà tớ theo đuổi, tớ muốn đưa nó vào lời ca<br><br>Nếu bây giờ mà thống khổ quá, chẳng cần biện hộ gì nữa đâu<br><br>Nên là cứ nhảy múa đi thôi nào                                                             |
+| 風になったのさ　泡と消えていったのさ<br><br>どうせ割り切れないこの感傷も何処かへ投げ捨てて<br><br>僕でいいのなら　君が知りたいのなら<br><br>もう隠すことなんてないよ<br><br>今から少しだけ<br><br>このまま少しだけ踊ろうぜ | kaze ni natta no sa awa to kiete itta no sa<br><br>douse warikirenai kono kanshou mo dokoka e nagesutete<br><br>boku de ii no nara kimi ga shiritai no nara<br><br>mou kakusu koto nante nai yo<br><br>ima kara sukoshi dake<br><br>kono mama sukoshi dake odorou ze | It’s become the wind, it’s vanished with the bubbles<br><br>No matter what, I’ll throw away this sensation I can’t explain<br><br>If it’s okay for me to do this, if you want to know,<br><br>I won’t hide anything anymore<br><br>From now on, just a little,<br><br>Like this, just a little, I’ll dance | Mọi thứ biến thành gió rồi, tan đi cùng bọt khí rồi<br><br>Cả những hỉ nộ ái ố mà tớ không thể quên đi này, tớ cũng sẽ đem vứt bỏ hết<br><br>Nếu cậu chấp nhận tớ, nếu cậu muốn biết về tớ, thì tớ sẽ không trốn tránh nữa<br><br>Giờ đây tớ sẽ nhảy múa cho cậu xem, chỉ một chút mà thôi |
 ##### Notes
 >
