--- a/(2019) That's Why I Gave Up On Music/07. In June, I Write About the Town After the Rain.md
+++ b/(2019) That's Why I Gave Up On Music/07. In June, I Write About the Town After the Rain.md
@@ -1,21 +1,27 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-六月は雨上がりの街を書く | Rokugatsu wa Ameagari no Machi wo Kaku
+六月は雨上がりの街を書く | Rokugatsu wa Ameagari no Machi wo Kaku | Tháng 6 viết về thành phố sau cơn mưa
 #### Lyrics
 
-| Japanese                                                                          | Romanji                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/06/06/yorushika-rokugatsu-wa-ameagari-no-machi-o-kaku/)                                                                                                                                                                                                                                                   |
-| --------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 窓映る街の群青<br><br>雨樋を伝う五月雨<br><br>ぼうとしたまま見ている<br><br>雫一つ落ちる　落ちる                      | mado utsuru machi no gunjou<br><br>amadoi o tsutau satsukiame<br><br>bou to shita mama mite iru<br><br>shizuku hitotsu ochiru ochiru                   | The ultramarine town is reflected in the window<br><br>The early summer rain flows through the drainpipe<br><br>In a daze, I’m watching as<br><br>A single drop falls, falls                                                                                                                                                                                         |
-| 心の形は長方形<br><br>この紙の中だけに宿る<br><br>書き連ねた詩の表面<br><br>その上澄みにだけ君がいる                    | kokoro no katachi wa chouhoukei<br><br>kono kami no naka dake ni yadoru<br><br>kakitsuraneta uta no hyoumen<br><br>sono uwazumi ni dake kimi ga iru    | The shape of my heart is rectangular<br><br>It lives only in this sheet of paper<br><br>While you exist only in the [supernate](https://www.thoughtco.com/definition-of-supernate-604666#:~:text=In%20chemistry%2C%20the%20supernate%20is,above%20the%20pellet%20from%20centrifugation.)<br><br>Floating on the surface of the lyrics that I wrote one after another |
-| なんてくだらないよ<br><br>馬鹿馬鹿しいよ<br><br>理屈じゃないものが見たいんだよ<br><br>深い雨の匂い<br><br>きっと忘れるだけ損だから | nante kudaranai yo<br><br>bakabakashii yo<br><br>rikutsu ja nai mono ga mitai n’da yo<br><br>fukai ame no nioi<br><br>kitto wasureru dake son dakara   | It’s all so pointless<br><br>It’s just stupid<br><br>I want to see something that’s not rational<br><br>Because I’m sure it would be unfortunate only to forget<br><br>The strong scent of rain                                                                                                                                                                      |
-| 口を動かして<br><br>指で擦って<br><br>言葉で縫い付けて<br><br>あの街で待ってて                               | kuchi o ugokashite<br><br>yubi de nazotte<br><br>kotoba de nuitsukete<br><br>ano machi de matte’te                                                     | Move your mouth<br><br>Trace it with your fingers<br><br>Sew it up with words<br><br>Wait for me in that town                                                                                                                                                                                                                                                        |
-| 雨音の踊る街灯<br><br>薄暮の先の曲がり角<br><br>一人、足音のパレード<br><br>夏を待つ雲の霞青                        | amaoto no odoru gaitou<br><br>usugure no saki no magari kado<br><br>hitori, ashioto no pareedo<br><br>natsu o matsu kumo no kasumi ao                  | The street lights dance to the sound of the rain<br><br>I pass twilight and turn at the corner,<br><br>A one-person parade of footsteps<br><br>The clouds that wait for the summer are a misty blue                                                                                                                                                                  |
-| 今の暮らしはi^2<br><br>君が引かれてる0の下<br><br>想い出の中でしか見えない<br><br>六月の雨上がりの中で                 | ima no kurashi wa ai no nijou<br><br>kimi ga hikarete’ru zero no shita<br><br>omoide no naka de shika mienai<br><br>rokugatsu no ameagari no naka de   | My life now is i^2<br><br>Subtracting you left me below zero<br><br>I can only see you in my memories<br><br>In the aftermath of the June rain                                                                                                                                                                                                                       |
-| 笑った顔だって書き殴って<br><br>胸を抉って<br><br>割り切れないのも知ってたんだろ<br><br>深い雨の匂いだって忘れるだけ損なのに        | waratta kao datte kakinugutte<br><br>mune o egutte<br><br>warikirenai no mo shitte’ta n’daro<br><br>fukai ame no nioi datte wasureru dake son na no ni | Scribbling down even your smiling face<br><br>Digging deep into my heart<br><br>I knew that it was unconvincing<br><br>Though it’s unfortunate only to forget even the strong scent of rain                                                                                                                                                                          |
-| ただ僕の書いた手紙を読んだ<br><br>君のその顔が見たい<br><br>あの夏を書いてる                                    | tada boku no kaita tegami o yonda<br><br>kimi no sono kao ga mitai<br><br>ano natsu o kaite’ru                                                         | I wish I could’ve seen your face<br><br>When you read my letters<br><br>Written about that summer                                                                                                                                                                                                                                                                    |
-| どうだっていい事ばかりだ<br><br>関わり合うのも億劫だ<br><br>言葉に出すのも面倒だ<br><br>結局君だけだったのか                | dou datte ii koto bakari da<br><br>kakawariau no mo okkuu da<br><br>kotoba ni dasu no mo mendou da<br><br>kekkyoku kimi dake datta no ka               | Everything’s so trivial<br><br>Getting involved with others is too much trouble<br><br>Even putting my thoughts into words is a pain<br><br>In the end, was it always only you?                                                                                                                                                                                      |
-| だってくだらないよ<br><br>馬鹿馬鹿しいよ<br><br>理屈じゃないのも知ってたんだよ<br><br>深い雨の匂い<br><br>ずっと雨の街を書いている | datte kudaranai yo<br><br>bakabakashii yo<br><br>rikutsu ja nai no mo shitte’ta n’da yo<br><br>fukai ame no nioi<br><br>zutto ame no machi o kaite iru | It’s all so goddamn pointless<br><br>It’s just stupid<br><br>I always knew it wasn’t rational<br><br>I’m always writing about the rainy town<br><br>And the strong scent of rain                                                                                                                                                                                     |
-| 心を動かして<br><br>胸を焦がして<br><br>このまま縫い付けて<br><br>あの街で待ってる                             | kokoro o ugokashite<br><br>mune o kogashite<br><br>kono mama nuitsukete<br><br>ano machi de matte’ru                                                   | Moving your heart<br><br>Yearning<br><br>Sewing things up like this<br><br>I’m waiting in that town                                                                                                                                                                                                                                                                  |
+| Japanese                                                                          | Romanji                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/06/06/yorushika-rokugatsu-wa-ameagari-no-machi-o-kaku/)                                                                                                                                                                                                                                                   | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                          |
+| --------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 窓映る街の群青<br><br>雨樋を伝う五月雨<br><br>ぼうとしたまま見ている<br><br>雫一つ落ちる　落ちる                      | mado utsuru machi no gunjou<br><br>amadoi o tsutau satsukiame<br><br>bou to shita mama mite iru<br><br>shizuku hitotsu ochiru ochiru                   | The ultramarine town is reflected in the window<br><br>The early summer rain flows through the drainpipe<br><br>In a daze, I’m watching as<br><br>A single drop falls, falls                                                                                                                                                                                         | Màu xanh biếc của khu phố phản chiếu lên cửa sổ, mưa tháng 5 lần theo máng nước mái hiên<br><br>Tớ thẫn thờ nhìn lên, một giọt nước rơi xuống, rơi xuống                                                                |
+| 心の形は長方形<br><br>この紙の中だけに宿る<br><br>書き連ねた詩の表面<br><br>その上澄みにだけ君がいる                    | kokoro no katachi wa chouhoukei<br><br>kono kami no naka dake ni yadoru<br><br>kakitsuraneta uta no hyoumen<br><br>sono uwazumi ni dake kimi ga iru    | The shape of my heart is rectangular<br><br>It lives only in this sheet of paper<br><br>While you exist only in the [supernate](https://www.thoughtco.com/definition-of-supernate-604666#:~:text=In%20chemistry%2C%20the%20supernate%20is,above%20the%20pellet%20from%20centrifugation.)<br><br>Floating on the surface of the lyrics that I wrote one after another | Trái tim tớ hình chữ nhật, ngự tại chính giữa tờ giấy này<br><br>Phía trước những câu hát nối đuôi nhau, cậu hiện lên bên trên đó                                                                                       |
+| なんてくだらないよ<br><br>馬鹿馬鹿しいよ<br><br>理屈じゃないものが見たいんだよ<br><br>深い雨の匂い<br><br>きっと忘れるだけ損だから | nante kudaranai yo<br><br>bakabakashii yo<br><br>rikutsu ja nai mono ga mitai n’da yo<br><br>fukai ame no nioi<br><br>kitto wasureru dake son dakara   | It’s all so pointless<br><br>It’s just stupid<br><br>I want to see something that’s not rational<br><br>Because I’m sure it would be unfortunate only to forget<br><br>The strong scent of rain                                                                                                                                                                      | Thật là vớ vẩn, thật là ngốc nghếch<br><br>Tớ muốn nhìn những thứ không phải là lẽ thường tình<br><br>Bởi việc quên đi hương thơm của cơn mưa sâu thẳm chỉ có mất mát mà thôi                                           |
+| 口を動かして<br><br>指で擦って<br><br>言葉で縫い付けて<br><br>あの街で待ってて                               | kuchi o ugokashite<br><br>yubi de nazotte<br><br>kotoba de nuitsukete<br><br>ano machi de matte’te                                                     | Move your mouth<br><br>Trace it with your fingers<br><br>Sew it up with words<br><br>Wait for me in that town                                                                                                                                                                                                                                                        | Hãy cử động khuôn miệng của cậu, lấy ngón tay chà xát<br><br>Rồi dùng ngôn từ để đơm lại, đợi tớ ở thành phố đó[[#^1]]                                                                                                  |
+| 雨音の踊る街灯<br><br>薄暮の先の曲がり角<br><br>一人、足音のパレード<br><br>夏を待つ雲の霞青                        | amaoto no odoru gaitou<br><br>usugure no saki no magari kado<br><br>hitori, ashioto no pareedo<br><br>natsu o matsu kumo no kasumi ao                  | The street lights dance to the sound of the rain<br><br>I pass twilight and turn at the corner,<br><br>A one-person parade of footsteps<br><br>The clouds that wait for the summer are a misty blue                                                                                                                                                                  | Tiếng nước mưa nhảy múa trên đèn đường, trời nhá nhem phía trước ngã rẽ<br><br>Tiếng bước chân của đoàn diễu hành đơn độc, màu xanh mờ của đám mây chờ mùa hè                                                           |
+| 今の暮らしはi^2<br><br>君が引かれてる0の下<br><br>想い出の中でしか見えない<br><br>六月の雨上がりの中で                 | ima no kurashi wa ai no nijou<br><br>kimi ga hikarete’ru zero no shita<br><br>omoide no naka de shika mienai<br><br>rokugatsu no ameagari no naka de   | My life now is i<sup>2</sup><br><br>Subtracting you left me below zero<br><br>I can only see you in my memories<br><br>In the aftermath of the June rain                                                                                                                                                                                                             | Cuộc sống của tớ bây giờ là i<sup>2</sup><br><br>Trừ đi cậu là âm mất rồi<br><br>Chỉ có thể thấy cậu trong hồi ức<br><br>Trong tiết trời tạnh mưa tháng 6                                                               |
+| 笑った顔だって書き殴って<br><br>胸を抉って<br><br>割り切れないのも知ってたんだろ<br><br>深い雨の匂いだって忘れるだけ損なのに        | waratta kao datte kakinugutte<br><br>mune o egutte<br><br>warikirenai no mo shitte’ta n’daro<br><br>fukai ame no nioi datte wasureru dake son na no ni | Scribbling down even your smiling face<br><br>Digging deep into my heart<br><br>I knew that it was unconvincing<br><br>Though it’s unfortunate only to forget even the strong scent of rain                                                                                                                                                                          | Khuôn mặt tươi cười của cậu tớ cũng vẽ nguệch ngoạc lên<br><br>Trái tim này tớ đục khoét nó ra<br><br>Tớ biết mình không thể quên đi được<br><br>Quên đi hương thơm cơn mưa sâu thẳm chỉ toàn là mất mát mà thôi[[#^2]] |
+| ただ僕の書いた手紙を読んだ<br><br>君のその顔が見たい<br><br>あの夏を書いてる                                    | tada boku no kaita tegami o yonda<br><br>kimi no sono kao ga mitai<br><br>ano natsu o kaite’ru                                                         | I wish I could’ve seen your face<br><br>When you read my letters<br><br>Written about that summer                                                                                                                                                                                                                                                                    | Chỉ là tớ muốn ngắm nhìn gương mặt cậu khi đọc được lá thư tớ viết<br><br>Tớ đang viết về mùa hè năm đó                                                                                                                 |
+| どうだっていい事ばかりだ<br><br>関わり合うのも億劫だ<br><br>言葉に出すのも面倒だ<br><br>結局君だけだったのか                | dou datte ii koto bakari da<br><br>kakawariau no mo okkuu da<br><br>kotoba ni dasu no mo mendou da<br><br>kekkyoku kimi dake datta no ka               | Everything’s so trivial<br><br>Getting involved with others is too much trouble<br><br>Even putting my thoughts into words is a pain<br><br>In the end, was it always only you?                                                                                                                                                                                      | Toàn những chuyện tớ không quan tâm<br><br>Dính dáng đến người khác cũng thật phiền phức<br><br>Nói ra thôi cũng thấy khó chịu<br><br>Kết cục tớ chỉ còn có cậu thôi sao?                                               |
+| だってくだらないよ<br><br>馬鹿馬鹿しいよ<br><br>理屈じゃないのも知ってたんだよ<br><br>深い雨の匂い<br><br>ずっと雨の街を書いている | datte kudaranai yo<br><br>bakabakashii yo<br><br>rikutsu ja nai no mo shitte’ta n’da yo<br><br>fukai ame no nioi<br><br>zutto ame no machi o kaite iru | It’s all so goddamn pointless<br><br>It’s just stupid<br><br>I always knew it wasn’t rational<br><br>I’m always writing about the rainy town<br><br>And the strong scent of rain                                                                                                                                                                                     | Tại vì vớ vẩn quá đi thôi, ngốc nghếch quá đi thôi<br><br>Tớ biết chuyện này hết sức vô lý <br><br>Hương thơm của cơn mưa sâu thẳm, tớ mãi viết về thành phố trong cơn mưa[[#^3]]                                       |
+| 心を動かして<br><br>胸を焦がして<br><br>このまま縫い付けて<br><br>あの街で待ってる                             | kokoro o ugokashite<br><br>mune o kogashite<br><br>kono mama nuitsukete<br><br>ano machi de matte’ru                                                   | Moving your heart<br><br>Yearning<br><br>Sewing things up like this<br><br>I’m waiting in that town                                                                                                                                                                                                                                                                  | Tớ sẽ lay động trái tim mình, rạo rực lồng ngực mình<br><br>Tớ sẽ cứ vậy đơm vào, chờ đợi cậu ở thành phố đó[[#^4]]                                                                                                     |
 ##### Notes
->
+> Đoạn này là một dạng ám hiệu mà chỉ Elma mới có thể hiểu, người ngoài như chúng ta không thể hiểu đâu ^1
+
+> Không thể quên đi Elma, vì quên đi chỉ có đau khổ thôi ^2
+
+> Quên được Elma thì sẽ không còn đau khổ nữa là chuyện rất vô lý, nên Amy tiếp tục sống trong ký ức ^3
+
+> Ám hiệu này ở phần 1 là Amy yêu cầu Elma làm, nhưng giờ Amy sẽ là người thực hiện ám hiệu này ^4
