--- a/(2019) That's Why I Gave Up On Music/08. In May, From the Window with Emerald Green.md
+++ b/(2019) That's Why I Gave Up On Music/08. In May, From the Window with Emerald Green.md
@@ -1,21 +1,21 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-五月は花緑青の窓辺から | Gogatsu wa Hanarokushou no Madobe Kara
+五月は花緑青の窓辺から | Gogatsu wa Hanarokushou no Madobe Kara | Tháng 5 ghé đến qua bậu cửa sổ màu xanh Paris
 #### Lyrics
 
-| Japanese                                                                | Romanji                                                                                                                                              | [Night Deer Translations, Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                    |
-| ----------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 夏が終わることもこの胸は<br><br>気のせいだって思っていた                                        | natsu ga owaru koto mo kono mune wa<br><br>ki no sei datte omotteita                                                                                 | In my chest it felt like even the summer ending<br><br>Was just my imagination                                                                                                                             |
-| 空いた教室　風揺れるカーテン<br><br>君と空を見上げたあの夏が<br><br>いつまでだって頭上にいた                  | aita kyōshitsu 　 kaze yureru kāten<br><br>kun to sora o miageta ano natsu ga<br><br>itsu made datte zujō ni ita                                      | In an empty classroom, the curtain was swaying in the wind<br><br>There, I was watching the sky together with you<br><br>That summer will never cease to be on my mind                                     |
-| さようなら<br><br>青々と息を呑んだ　例う涙は花緑青だ<br><br>黙ったらもう消えんだよ<br><br>馬鹿みたいだよな       | sayōnara<br>  <br>aoao to iki o nond rei u namida wa hana rokushōda<br><br>damattara mō kiendayo<br><br>baka mitaidayona                             | Goodbye<br><br>My youth bruised me and made me gasp; tears are just like emerald-green [[#^1]]<br><br>If I don't say anything, then it will just disappear<br><br>I'm really acting like a fool            |
-| 思い出せ！                                                                   | Omoidase!                                                                                                                                            | Remember!                                                                                                                                                                                                  |
-| 思い出せない、と頭が叫んだ<br><br>ならばこの痛みが魂だ<br><br>それでも　それでも聞こえないというなら              | Omoidasenai, to atama ga sakenda<br><br>Naraba kono itami ga tamashīda<br><br>Soredemo sore demo kikoenai to iunara                                  | "I can't remember," I screamed inside my mind<br><br>If that's the case, then this pain itself is my soul<br><br>Even so,<br><br>Even so, if you insist that you can't hear it…                            |
-| 愛想笑いの他に何も出来ない<br><br>君と夏を二人過ごした想い出を<br><br>笑われたって黙っている                  | Aisōwarai no ta ni nani mo dekinai<br><br>Kimi to natsu o futari sugoshita omoide o<br><br>Warawa retatte damatte iru                                | I can't do anything other than force a smile<br><br>The memory of the two of us, spending that summer together<br><br>was laughed at, and I'm stuck here saying nothing                                    |
-| 笑うなよ　僕らの価値は自明だ<br><br>例うならばこれは魂だ<br><br>黙っただけ辛いのに馬鹿みたいだろ<br><br>なぁ、言い返せ | warau na yo bokura no kachi wa jimei da<br><br>Tatou naraba kore wa tamashii da<br><br>Damatta dake tsurai no ni baka mitai daro<br><br>Naa, iikaese | Don't laugh! Our value is self-evident<br><br>If I’m to make an analogy, this is the soul<br><br>I'm really acting like a fool, even though just staying silent is painful<br><br>Hey, say something back! |
-| 言い返せないまま一人歩いた<br><br>指を指された僕が残った<br><br>それでも　それでも思い出せないのか               | iikaesenai mama hitori aruita<br><br>Yubi wo sasareta boku ga nokotta<br><br>Sore demo sore demo omoidasenai no ka                                   | Not being able to say anything back, I walked alone<br><br>Only my condemned self remained<br><br>Even so,<br><br>Even so, I still can't remember, huh...                                                  |
-| さようなら<br><br>青々と息を呑んだ　例う涙は花緑青だ<br><br>黙ってくれ　わかったよ<br><br>君の声がする         | sayounara<br><br>Aoao to iki wo nonda tatou namida wa hana rokushou da<br><br>Damatte kure wakatta yo<br><br>Kimi no koe ga suru                     | Goodbye<br><br>My youth bruised me and made me gasp; tears are just like emerald-green<br><br>Just shut up, I get it already<br><br>I can hear your voice                                                  |
-| 「思い出せ！」                                                                 | “omoidase!”                                                                                                                                          | "Remember!"                                                                                                                                                                                                |
-| 思い出したんだ、と喉が叫んだ<br><br>この痛みが君の証明だ<br><br>それでも　それでも聞こえないというなら             | omoidashitan da, to nodo ga sakenda<br><br>Kono itami ga kimi no shoumei da<br><br>Sore demo sore demo kikoenai to iu nara                           | "I remembered," I screamed from my throat<br><br>This pain itself is your proof<br><br>Even so,<br><br>Even so, if you insist that you can't hear it...                                                    |
+| Japanese                                                                | Romanji                                                                                                                                              | [Night Deer Translations, Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                    | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                      |
+| ----------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 夏が終わることもこの胸は<br><br>気のせいだって思っていた                                        | natsu ga owaru koto mo kono mune wa<br><br>ki no sei datte omotteita                                                                                 | In my chest it felt like even the summer ending<br><br>Was just my imagination                                                                                                                             | Mùa hè sắp kết thúc, tớ lại nghĩ là do trái tim tớ tưởng tượng ra thôi.                                                                                                                                                             |
+| 空いた教室　風揺れるカーテン<br><br>君と空を見上げたあの夏が<br><br>いつまでだって頭上にいた                  | aita kyōshitsu 　 kaze yureru kāten<br><br>kun to sora o miageta ano natsu ga<br><br>itsu made datte zujō ni ita                                      | In an empty classroom, the curtain was swaying in the wind<br><br>There, I was watching the sky together with you<br><br>That summer will never cease to be on my mind                                     | Lớp học trống không, tấm rèm cửa đung đưa trong gió<br><br>Mùa hè mà tớ cùng cậu ngắm nhìn bầu trời, chưa bao giờ biến mất khỏi tâm trí tớ                                                                                          |
+| さようなら<br><br>青々と息を呑んだ　例う涙は花緑青だ<br><br>黙ったらもう消えんだよ<br><br>馬鹿みたいだよな       | sayōnara<br>  <br>aoao to iki o nond rei u namida wa hana rokushōda<br><br>damattara mō kiendayo<br><br>baka mitaidayona                             | Goodbye<br><br>My youth bruised me and made me gasp; tears are just like emerald-green [[#^1]]<br><br>If I don't say anything, then it will just disappear<br><br>I'm really acting like a fool            | Tạm biệt cậu<br><br>Tớ đã thản nhiên mà nuốt một hơi, nước mắt cũng giống như chất Xanh Paris vậy<br><br>Chỉ cần im lặng thì sẽ tan biến, thật là ngu ngốc quá nhỉ.                                                                 |
+| 思い出せ！                                                                   | Omoidase!                                                                                                                                            | Remember!                                                                                                                                                                                                  | Hãy nhớ ra đi!                                                                                                                                                                                                                      |
+| 思い出せない、と頭が叫んだ<br><br>ならばこの痛みが魂だ<br><br>それでも　それでも聞こえないというなら              | Omoidasenai, to atama ga sakenda<br><br>Naraba kono itami ga tamashīda<br><br>Soredemo sore demo kikoenai to iunara                                  | "I can't remember," I screamed inside my mind<br><br>If that's the case, then this pain itself is my soul<br><br>Even so,<br>Even so, if you insist that you can't hear it…                                | Đầu óc tớ gào thét, nó không thể nhớ ra được<br><br>Nếu thế thì nỗi đau này là linh hồn của tớ<br><br>Dẫu thế, dẫu thế, nếu cậu vẫn không thể nghe thấy tiếng tớ…                                                                   |
+| 愛想笑いの他に何も出来ない<br><br>君と夏を二人過ごした想い出を<br><br>笑われたって黙っている                  | Aisōwarai no ta ni nani mo dekinai<br><br>Kimi to natsu o futari sugoshita omoide o<br><br>Warawa retatte damatte iru                                | I can't do anything other than force a smile<br><br>The memory of the two of us, spending that summer together<br><br>was laughed at, and I'm stuck here saying nothing                                    | Ngoài cười trừ ra thì tớ không thể làm gì cả<br><br>Cho dù người ta có cười cợt kỷ niệm mà tớ cùng cậu trải qua mùa hè thì tớ vẫn im lặng                                                                                           |
+| 笑うなよ　僕らの価値は自明だ<br><br>例うならばこれは魂だ<br><br>黙っただけ辛いのに馬鹿みたいだろ<br><br>なぁ、言い返せ | warau na yo bokura no kachi wa jimei da<br><br>Tatou naraba kore wa tamashii da<br><br>Damatta dake tsurai no ni baka mitai daro<br><br>Naa, iikaese | Don't laugh! Our value is self-evident<br><br>If I’m to make an analogy, this is the soul<br><br>I'm really acting like a fool, even though just staying silent is painful<br><br>Hey, say something back! | Đừng có cười tôi!<br><br>Giá trị của chúng tôi là điều hiển nhiên<br>Nếu so sánh thì nó chính là linh hồn của tôi!<br><br>Chỉ im lặng thôi cũng đã đau đớn rồi, vậy mà trông tôi cứ như tên ngốc vậy<br><br>Này, mau cãi lại họ đi! |
+| 言い返せないまま一人歩いた<br><br>指を指された僕が残った<br><br>それでも　それでも思い出せないのか               | iikaesenai mama hitori aruita<br><br>Yubi wo sasareta boku ga nokotta<br><br>Sore demo sore demo omoidasenai no ka                                   | Not being able to say anything back, I walked alone<br><br>Only my condemned self remained<br><br>Even so,<br>Even so, I still can't remember, huh...                                                      | Tớ không thể cãi lại và tiếp tục bước đi một mình<br><br>Còn lại mình tớ bị người ta chỉ trỏ<br><br>Dù thế, dù thế tớ vẫn không thể nhớ lại về cậu ư?                                                                               |
+| さようなら<br><br>青々と息を呑んだ　例う涙は花緑青だ<br><br>黙ってくれ　わかったよ<br><br>君の声がする         | sayounara<br><br>Aoao to iki wo nonda tatou namida wa hana rokushou da<br><br>Damatte kure wakatta yo<br><br>Kimi no koe ga suru                     | Goodbye<br><br>My youth bruised me and made me gasp; tears are just like emerald-green<br><br>Just shut up, I get it already<br><br>I can hear your voice                                                  | Tạm biệt cậu<br><br>Tớ đã thản nhiên mà nuốt một hơi, nước mắt cũng giống như chất Xanh Paris vậy<br><br>Im lặng hết đi! Tôi biết rồi, tôi nghe thấy tiếng cậu ấy rồi!                                                              |
+| 「思い出せ！」                                                                 | “omoidase!”                                                                                                                                          | "Remember!"                                                                                                                                                                                                | Cậu ấy nói “Mau nhớ lại đi!”                                                                                                                                                                                                        |
+| 思い出したんだ、と喉が叫んだ<br><br>この痛みが君の証明だ<br><br>それでも　それでも聞こえないというなら             | omoidashitan da, to nodo ga sakenda<br><br>Kono itami ga kimi no shoumei da<br><br>Sore demo sore demo kikoenai to iu nara                           | "I remembered," I screamed from my throat<br><br>This pain itself is your proof<br><br>Even so,<br>Even so, if you insist that you can't hear it...                                                        | Cổ họng tớ gào thét, “tớ đã nhớ lại rồi”<br><br>Nỗi đau này chính là bằng chứng của cậu<br><br>Dẫu thế, dẫu thế, nếu cậu vẫn không thể nghe thấy…                                                                                   |
 ##### Notes
 >See [[Lore/Letters to Elma#5/17]] for explanation ^1
