--- a/(2019) That's Why I Gave Up On Music/09. False Night.md
+++ b/(2019) That's Why I Gave Up On Music/09. False Night.md
@@ -1,19 +1,19 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-夜紛い | Yorumagai
+夜紛い | Yorumagai | Tưởng như ban đêm
 #### Lyrics
 
-| Japanese                                                                                                                        | Romanji                                                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                                                                                                                                                                       |
-| ------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 等身大を歌うとかそんなのどうでもいいから<br><br>他人よりも楽に生きたい　努力はしたくない                                                                                | toushindai wo utau toka sonna no dou demo ii kara<br><br>hitoyori mo raku ni ikitai doryoku wa shitaku nai                                                                                                                                                             | Who cares about singing faithfully<br><br>I wanna live taking it easier than other people, I don’t wanna work hard                                                                                                                                                                                                                   |
-| 俯いたまま歩くから空の青さがわからない<br><br>君の写真を見ていただけ                                                                                          | utsumuita mama aruku kara sora no aosa ga wakaranai<br><br>kimi no shashin wo mite ita dake                                                                                                                                                                            | Walking along with my head down, not realizing how blue the sky is<br><br>I’m stuck gazing only at your picture                                                                                                                                                                                                                      |
-| がらんどうの心が夕陽の街を歩いてく<br><br>銃身よりも重いと引き攣ったその嘘の分だけ                                                                                   | garandou no kokoro ga yuuhi no machi wo aruiteku<br><br>juushin yori mo omoi to hikitsutta sono uso no bun dake                                                                                                                                                        | My hollow heart set out for a stroll in the sunset town<br><br>The part of it that’s a lie slowly and heavily growing more taut than the barrel of a gun                                                                                                                                                                             |
-| 人生ごとマシンガン、消し飛ばしてもっと<br><br>心臓すら攫って　ねぇ、さよなら一言で<br><br>悲しいことを消したい<br><br>嬉しいことも消したい<br><br>心を消したい<br><br>君に一つでいい、ただ穴を開けたい         | jinseigoto mashin gan, keshitobashite motto<br><br>shinzou sura saratte nee, sayonara hitokoto de<br><br>kanashii koto wo keshitai<br><br>ureshii koto mo keshitai<br><br>kokoro wo keshitai<br><br>kimi ni hitotsu de ii, tada ana wo aketai                          | Each life is a machine gun, blow it all away, more!<br><br>Hey, even the heart’s taken away, with just one parting word<br><br>I wanna erase these sad things<br><br>I wanna erase these happy things too<br><br>I wanna erase my heart<br><br>One’s enough for you, just wanna put a hole in you                                    |
-| 名もない花が綺麗とかそんなのどうでもいいから<br><br>貧しい心を消したい　バイトはしたくない                                                                               | namonai hana ga kirei toka sonna no dou demo ii kara<br><br>mazushii kokoro wo keshitai baito wa shitaku nai                                                                                                                                                           | “Nameless flowers are beautiful”, who cares about that<br><br>I wanna erase this obnoxiously bright heart, I don’t wanna go to work                                                                                                                                                                                                  |
-| 俯いたまま話すから人の気持ちがわからない<br><br>君の写真を見ていただけ                                                                                         | utsumuita mama hanasu kara hito no kimochi ga wakaranai<br><br>kimi no shashin wo mite ita dake                                                                                                                                                                        | Talking to people with my head down, I can’t understand people’s feelings<br><br>I’m stuck gazing only at your picture                                                                                                                                                                                                               |
-| ライブハウスの中で等身大を歌ってる<br><br>金にもならないような歌なんか歌いやがってさ、馬鹿みたいだな                                                                          | raibu hausu no naka de toushindai wo utatteru<br><br>kane ni mo naranai you na uta nanka utaiyagatte sa, baka mitai da na                                                                                                                                              | In the middle of the live bar, I’m faithfully singing<br><br>Having the nerve to sing songs not for money, it’s idiotic ain’t it                                                                                                                                                                                                     |
-| 人生とはマシンガン　そんなことを言いたい<br><br>リフレインごと歌って　ねぇ、その喉から全て<br><br>切ない歌を消したい　優しい歌も消したい<br><br>聞くだけで痛い　僕に一つでいい                             | jinsei to wa mashin gan sonna koto wo iitai<br><br>rifureingoto utatte nee, sono nodo kara subete<br><br>setsunai uta wo keshitai yasashii uta mo keshitai<br><br>kiku dake de itai boku ni hitotsu de ii                                                              | Life is a machine gun, that’s what I’m getting at<br><br>Hey, sing on every refrain, with all of that throat<br><br>I wanna erase these painful songs<br><br>I wanna erase these kind songs too<br><br>Just listening hurts<br><br>One’s enough for me,                                                                              |
-| 人生ごとマシンガン　消し飛ばしてもっと<br><br>苦しいんだと笑って　ねぇ、さよなら一言で<br><br>君が後生抱えて生きていくような思い出になりたい　見るだけで痛いような<br><br>ただ一つでいい　君に一つでいい<br><br>風穴を開けたい | jinseigoto mashin gan keshitobashite motto<br><br>kurushiin da to waratte nee, sayonara hitokoto de<br><br>kimi ga kousei kakaete ikite iku you na omoide ni naritai miru dake de itai you na<br><br>tada hitotsu de ii kimi ni hitotsu de ii<br><br>kazaana wo aketai | Each life is a machine gun, blow it all away, more!<br><br>Hey, laugh that it’s painful, with one parting word<br><br>I wanna become a memory for you, that lives by passing it onto the next generation, I feel like just watching hurts<br><br>Just one is enough, once is enough for you<br><br>I wanna penetrate through [[#^1]] |
+| Japanese                                                                                                                        | Romanji                                                                                                                                                                                                                                                                | [Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                                                                                                                                                                       | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                                                                                                                        |
+| ------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 等身大を歌うとかそんなのどうでもいいから<br><br>他人よりも楽に生きたい　努力はしたくない                                                                                | toushindai wo utau toka sonna no dou demo ii kara<br><br>hitoyori mo raku ni ikitai doryoku wa shitaku nai                                                                                                                                                             | Who cares about singing faithfully<br><br>I wanna live taking it easier than other people, I don’t wanna work hard                                                                                                                                                                                                                   | Tớ chẳng cần phải hát được như ca sĩ thật<br><br>Tớ muốn sống dễ dàng hơn người khác, tớ không muốn nỗ lực nữa.                                                                                                                                                                                                                       |
+| 俯いたまま歩くから空の青さがわからない<br><br>君の写真を見ていただけ                                                                                          | utsumuita mama aruku kara sora no aosa ga wakaranai<br><br>kimi no shashin wo mite ita dake                                                                                                                                                                            | Walking along with my head down, not realizing how blue the sky is<br><br>I’m stuck gazing only at your picture                                                                                                                                                                                                                      | Tớ cúi đầu xuống bước đi nên không biết trời xanh như thế nào<br><br>Tớ chỉ nhìn vào bức ảnh của cậu thôi                                                                                                                                                                                                                             |
+| がらんどうの心が夕陽の街を歩いてく<br><br>銃身よりも重いと引き攣ったその嘘の分だけ                                                                                   | garandou no kokoro ga yuuhi no machi wo aruiteku<br><br>juushin yori mo omoi to hikitsutta sono uso no bun dake                                                                                                                                                        | My hollow heart set out for a stroll in the sunset town<br><br>The part of it that’s a lie slowly and heavily growing more taut than the barrel of a gun                                                                                                                                                                             | Trái tim trống rỗng của tớ đang bước đi trong thành phố ngập nắng<br><br>Những lời nói dối chồng chất lên nặng hơn cả nòng súng.                                                                                                                                                                                                      |
+| 人生ごとマシンガン、消し飛ばしてもっと<br><br>心臓すら攫って　ねぇ、さよなら一言で<br><br>悲しいことを消したい<br><br>嬉しいことも消したい<br><br>心を消したい<br><br>君に一つでいい、ただ穴を開けたい         | jinseigoto mashin gan, keshitobashite motto<br><br>shinzou sura saratte nee, sayonara hitokoto de<br><br>kanashii koto wo keshitai<br><br>ureshii koto mo keshitai<br><br>kokoro wo keshitai<br><br>kimi ni hitotsu de ii, tada ana wo aketai                          | Each life is a machine gun, blow it all away, more!<br><br>Hey, even the heart’s taken away, with just one parting word<br><br>I wanna erase these sad things<br><br>I wanna erase these happy things too<br><br>I wanna erase my heart<br><br>One’s enough for you, just wanna put a hole in you                                    | Cả cuộc đời này tớ muốn dùng súng thổi bay đi<br><br>Ngay cả trái tim này tớ cũng quăng đi, chỉ bằng một lời tạm biệt mà thôi<br><br>Tớ muốn xoá sổ những chuyện buồn thương<br><br>Tớ muốn xoá sổ những chuyện vui vẻ<br><br>Tớ muốn xoá sổ trái tim mình<br><br>Tớ muốn mở ra một chiếc lỗ trong trái tim cậu, chỉ một thôi là được |
+| 名もない花が綺麗とかそんなのどうでもいいから<br><br>貧しい心を消したい　バイトはしたくない                                                                               | namonai hana ga kirei toka sonna no dou demo ii kara<br><br>mazushii kokoro wo keshitai baito wa shitaku nai                                                                                                                                                           | “Nameless flowers are beautiful”, who cares about that<br><br>I wanna erase this obnoxiously bright heart, I don’t wanna go to work                                                                                                                                                                                                  | Tớ không quan tâm đến chuyện những bông hoa vô danh cũng có vẻ đẹp riêng<br><br>Tớ muốn kết liễu trái tim bần cùng này<br><br>Tớ không muốn đi làm nữa                                                                                                                                                                                |
+| 俯いたまま話すから人の気持ちがわからない<br><br>君の写真を見ていただけ                                                                                         | utsumuita mama hanasu kara hito no kimochi ga wakaranai<br><br>kimi no shashin wo mite ita dake                                                                                                                                                                        | Talking to people with my head down, I can’t understand people’s feelings<br><br>I’m stuck gazing only at your picture                                                                                                                                                                                                               | Tớ cúi xuống nói chuyện nên tớ không hiểu được cảm xúc của người khác<br><br>Tớ chỉ muốn nhìn vào bức ảnh của cậu mà thôi                                                                                                                                                                                                             |
+| ライブハウスの中で等身大を歌ってる<br><br>金にもならないような歌なんか歌いやがってさ、馬鹿みたいだな                                                                          | raibu hausu no naka de toushindai wo utatteru<br><br>kane ni mo naranai you na uta nanka utaiyagatte sa, baka mitai da na                                                                                                                                              | In the middle of the live bar, I’m faithfully singing<br><br>Having the nerve to sing songs not for money, it’s idiotic ain’t it                                                                                                                                                                                                     | Cậu đang hát như một người bình thường, trong một nhà hát lớn<br><br>Phải hát những bài hát không đẻ ra tiền, thật cứ như kẻ ngốc vậy                                                                                                                                                                                                 |
+| 人生とはマシンガン　そんなことを言いたい<br><br>リフレインごと歌って　ねぇ、その喉から全て<br><br>切ない歌を消したい　優しい歌も消したい<br><br>聞くだけで痛い　僕に一つでいい                             | jinsei to wa mashin gan sonna koto wo iitai<br><br>rifureingoto utatte nee, sono nodo kara subete<br><br>setsunai uta wo keshitai yasashii uta mo keshitai<br><br>kiku dake de itai boku ni hitotsu de ii                                                              | Life is a machine gun, that’s what I’m getting at<br><br>Hey, sing on every refrain, with all of that throat<br><br>I wanna erase these painful songs<br><br>I wanna erase these kind songs too<br><br>Just listening hurts<br><br>One’s enough for me,                                                                              | Tớ muốn nói rằng, cuộc đời chính là một cây súng<br><br>Khi cậu cất giọng phần điệp khúc<br><br>Nè, tớ muốn xoá sổ những bài hát đau thương,cả những bài hát dịu dàng từ cổ họng ấy<br><br>Chỉ nghe thôi cũng đủ đau đớn rồi, tớ chỉ cần một bài hát mà thôi                                                                          |
+| 人生ごとマシンガン　消し飛ばしてもっと<br><br>苦しいんだと笑って　ねぇ、さよなら一言で<br><br>君が後生抱えて生きていくような思い出になりたい　見るだけで痛いような<br><br>ただ一つでいい　君に一つでいい<br><br>風穴を開けたい | jinseigoto mashin gan keshitobashite motto<br><br>kurushiin da to waratte nee, sayonara hitokoto de<br><br>kimi ga kousei kakaete ikite iku you na omoide ni naritai miru dake de itai you na<br><br>tada hitotsu de ii kimi ni hitotsu de ii<br><br>kazaana wo aketai | Each life is a machine gun, blow it all away, more!<br><br>Hey, laugh that it’s painful, with one parting word<br><br>I wanna become a memory for you, that lives by passing it onto the next generation, I feel like just watching hurts<br><br>Just one is enough, once is enough for you<br><br>I wanna penetrate through [[#^1]] | Tớ sẽ thổi bay cuộc đời này bằng một cây súng<br><br>Tớ mỉm cười nói rằng tớ đau khổ lắm rồi, chỉ với một lời tạm biệt<br><br>Tớ muốn trở thành hồi ức mà cậu sẽ ôm đến kiếp sau để sống<br><br>Chỉ một mà thôi, tớ muốn để lại trong cậu<br><br>Chỉ một lỗ hổng mà thôi, để nhìn vào thôi cũng thấy đau đớn                          |
 ##### Notes
 >this line in japanese means both “I wanna open a hole in you (put a bullet through you)” and “I wanna breathe new life into you”. ^1
