--- a/(2019) That's Why I Gave Up On Music/11. Parade.md
+++ b/(2019) That's Why I Gave Up On Music/11. Parade.md
@@ -4,15 +4,15 @@ await dv.view('_script');
 パレード | Parade
 #### Lyrics
 
-| Japanese                                                                              | Romanji                                                                                                                                                                                         | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/03/13/yorushika-parade/)                                                                                                       |
-| ------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 身体の奥 喉の真下<br><br>心があるとするなら君はそこなんだろうから                                                 | karada no oku nodo no masshita<br><br>kokoro ga aru to suru nara kimi wa soko na n’darou kara                                                                                                   | If there’s a heart inside my body, right below my throat,<br><br>Then that must be where you are                                                                                          |
-| ずっと前からわかっていたけど<br><br>歳取れば君の顔も忘れてしまうからさ<br><br>身体の奥 喉の中で 言葉が出来る瞬間を僕は知りたいから            | zutto mae kara wakatte ita kedo<br><br>toshitoreba kimi no kao mo wasurete shimau kara sa<br><br>karada no oku nodo no naka de kotoba ga dekiru shunkan o boku wa shiritai kara                 | I’ve known for a long time<br><br>That as I got older I would even forget your face<br><br>Because I want to know the moment that words are able to form inside my body, in my throat     |
-| このまま夜が明けたら                                                                            | kono mama yo ga aketara                                                                                                                                                                         | If the dawn comes like this…                                                                                                                                                              |
-| 乾かないように想い出を<br><br>失くさないようにこの歌を<br><br>忘れないで もうちょっとだけでいい<br><br>一人ぼっちのパレードを           | kawakanai you ni omoide o<br><br>nakusanai you ni kono uta o<br><br>wasurenaide mou chotto dake de ii<br><br>hitoribocchi no PAREEDO o                                                          | I hope that my memories don’t dry out<br><br>I hope that I don’t lose this song<br><br>Don’t forget, for just a little longer,<br><br>The lonely parade                                   |
-| ずっと前から思ってたけど<br><br>君の指先の中にはたぶん神様が住んでいる<br><br>今日、昨日よりずっと前から、ずっとその昔の昔から。<br><br>わかるんだ | zutto mae kara omotte’ta kedo<br><br>kimi no yubisaki no naka ni wa tabun kami-sama ga sunde iru<br><br>kyou, kinou yori zutto mae kara, zutto sono mukashi no mukashi kara.<br><br>wakaru n’da | I’ve thought for a long time that<br><br>Gods might reside in your fingertips<br><br>Since before today, before yesterday, since a long, long time past<br><br>I’ve known that            |
-| 身体の奥 喉の真下<br><br>君の書く詩を ただ真似る日々を                                                      | karada no oku nodo no masshita<br><br>kimi no kaku uta o tada maneru hibi o                                                                                                                     | Inside my body, right below my throat<br><br>Are the days when I’ve only been imitating your song                                                                                         |
-| 忘れないように<br><br>君のいない今の温度を                                                             | wasurenai you ni<br><br>kimi no inai ima no ondo o                                                                                                                                              | I hope that I don’t forget<br><br>The temperature of this moment in which you’re not here                                                                                                 |
-| 乾かないような想い出で<br><br>失くせないでいたこの歌で<br><br>もう少しでいい もうちょっとだけでいい<br><br>一人ぼっちのパレードを         | kawakanai you ni omoide de<br><br>nakusenaide ita kono uta de<br><br>mou sukoshi de ii mou chotto dake de ii<br><br>hitoribocchi no PAREEDO o                                                   | With memories that I hope won’t dry out<br><br>With this song that I haven’t been able to forget<br><br>Just a little bit more, for just a little longer<br><br>I’ll make a lonely parade |
+| Japanese                                                                              | Romanji                                                                                                                                                                                         | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/03/13/yorushika-parade/)                                                                                                       | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                  |
+| ------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 身体の奥 喉の真下<br><br>心があるとするなら君はそこなんだろうから                                                 | karada no oku nodo no masshita<br><br>kokoro ga aru to suru nara kimi wa soko na n’darou kara                                                                                                   | If there’s a heart inside my body, right below my throat,<br><br>Then that must be where you are                                                                                          | Giả sử bên trong cơ thể này, ngay bên dưới cổ họng có một trái tim<br><br>Thì cậu chính là trái tim đó                                                                                                                          |
+| ずっと前からわかっていたけど<br><br>歳取れば君の顔も忘れてしまうからさ<br><br>身体の奥 喉の中で 言葉が出来る瞬間を僕は知りたいから            | zutto mae kara wakatte ita kedo<br><br>toshitoreba kimi no kao mo wasurete shimau kara sa<br><br>karada no oku nodo no naka de kotoba ga dekiru shunkan o boku wa shiritai kara                 | I’ve known for a long time<br><br>That as I got older I would even forget your face<br><br>Because I want to know the moment that words are able to form inside my body, in my throat     | Vì từ xưa tớ đã hiểu rằng<br><br>Càng lớn lên tớ sẽ dần quên mất khuôn mặt cậu<br><br>Và vì trong cơ thể này, bên trong cổ họng tớ<br>Tớ muốn nắm bắt tất cả khoảnh khắc tiếng nói của mình cất lên<br>                         |
+| このまま夜が明けたら                                                                            | kono mama yo ga aketara                                                                                                                                                                         | If the dawn comes like this…                                                                                                                                                              | Nếu màn đêm cứ thôi trôi đi                                                                                                                                                                                                     |
+| 乾かないように想い出を<br><br>失くさないようにこの歌を<br><br>忘れないで もうちょっとだけでいい<br><br>一人ぼっちのパレードを           | kawakanai you ni omoide o<br><br>nakusanai you ni kono uta o<br><br>wasurenaide mou chotto dake de ii<br><br>hitoribocchi no PAREEDO o                                                          | I hope that my memories don’t dry out<br><br>I hope that I don’t lose this song<br><br>Don’t forget, for just a little longer,<br><br>The lonely parade                                   | Để ký ức này không khô héo<br><br>Để bài hát này không mất đi<br><br>Xin cậu đừng quên chúng, hãy lưu lại dù chỉ một chút nữa<br><br>Hãy để đoàn diễu hành đơn độc này kéo dài hơn chút nữa                                     |
+| ずっと前から思ってたけど<br><br>君の指先の中にはたぶん神様が住んでいる<br><br>今日、昨日よりずっと前から、ずっとその昔の昔から。<br><br>わかるんだ | zutto mae kara omotte’ta kedo<br><br>kimi no yubisaki no naka ni wa tabun kami-sama ga sunde iru<br><br>kyou, kinou yori zutto mae kara, zutto sono mukashi no mukashi kara.<br><br>wakaru n’da | I’ve thought for a long time that<br><br>Gods might reside in your fingertips<br><br>Since before today, before yesterday, since a long, long time past<br><br>I’ve known that            | Trước đây tớ đã nghĩ đến điều này rồi<br><br>Rằng có lẽ bên trong đầu ngón tay cảu cậu có một vị thần sinh sống<br><br>Trước hôm nay, trước cả hôm qua, từ rất lâu về trước<br>Từ thật xa xưa, xa xưa kia<br><br>Tớ đã biết rồi |
+| 身体の奥 喉の真下<br><br>君の書く詩を ただ真似る日々を                                                      | karada no oku nodo no masshita<br><br>kimi no kaku uta o tada maneru hibi o                                                                                                                     | Inside my body, right below my throat<br><br>Are the days when I’ve only been imitating your song                                                                                         | Bên trong cơ thể này, ngay bên dưới cổ họng<br><br>Tớ lưu giữ lại nhiệt độ ngay lúc này khi không có cậu nơi đây                                                                                                                |
+| 忘れないように<br><br>君のいない今の温度を                                                             | wasurenai you ni<br><br>kimi no inai ima no ondo o                                                                                                                                              | I hope that I don’t forget<br><br>The temperature of this moment in which you’re not here                                                                                                 | Để tớ không quên đi<br><br>Chuỗi ngày mà tớ chỉ bắt chước những bản nhạc cậu viết                                                                                                                                               |
+| 乾かないような想い出で<br><br>失くせないでいたこの歌で<br><br>もう少しでいい もうちょっとだけでいい<br><br>一人ぼっちのパレードを         | kawakanai you ni omoide de<br><br>nakusenaide ita kono uta de<br><br>mou sukoshi de ii mou chotto dake de ii<br><br>hitoribocchi no PAREEDO o                                                   | With memories that I hope won’t dry out<br><br>With this song that I haven’t been able to forget<br><br>Just a little bit more, for just a little longer<br><br>I’ll make a lonely parade | Bằng những ký ức không khô quạnh<br><br>Bằng bài hát mà tớ giữ mãi không buông<br><br>Chỉ một chút nữa thôi, một chút nữa thôi cũng được<br><br>Tớ sẽ tiếp tục đoàn diễu hành cô độc                                            |
 ##### Notes
 >
