--- a/(2019) That's Why I Gave Up On Music/12. Elma.md
+++ b/(2019) That's Why I Gave Up On Music/12. Elma.md
@@ -4,18 +4,18 @@ await dv.view('_script');
 エルマ | Elma
 #### Lyrics
 
-| Japanese                                                                    | Romanji                                                                                                                                                                 | [Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                                                    |
-| --------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 嘘つきなんて　わかって　触れて<br><br>エルマ　まだ　まだ痛いよ<br><br>もうさよならだって歌って<br><br>暮れて夜が来るまで    | usotsuki nante wakatte furete<br><br>eruma mada mada itai yo<br><br>mou sayonara datte utatte<br><br>kurete yoru ga kuru made                                           | I know I’m a liar, I feel it<br><br>Still Elma, it still hurts<br><br>So sing goodbye already<br><br>Until the darkening night falls                                                                              |
-| 朝日の差す木漏れ日　僕とエルマ<br><br>まだ　まだ眠いかい<br><br>初夏の初め近づく五月の森                        | asahi no sasu komorebi boku to eruma<br><br>mada mada nemui kai<br><br>shoka no hajime chikazuku go gatsu no mori                                                       | Elma and I, with the morning sun shining through the trees on us<br><br>Are you still, still sleepy?<br><br>The early summer is drawing near in the May forest                                                    |
-| 歩きだした顔には花の雫<br><br>ほら　涙みたいだ<br><br>このまま欠伸をしよう<br><br>なんならまた椅子にでも座ろう         | arukidashita kao ni wa hana no shizuku<br><br>hora namida mitai da<br><br>kono mama akubi wo shiyou<br><br>nan nara mata isu ni demo suwarou                            | Walking out, on your face is the dew from a flower<br><br>Look, it’s like a teardrop<br><br>Let’s just stay here and yawn<br><br>Who knows, maybe we’ll even sit down in a chair                                  |
-| 許せないことなんてないんだよ<br><br>君は優しくなんてなれる                                           | yurusenai koto nante nai nda yo<br><br>kimi wa yasashiku nante nareru                                                                                                   | There’s nothing that can’t be forgiven, you know<br><br>You can become kind                                                                                                                                       |
-| このまま何処かの遠い国で<br><br>浅い夏の隙間に寝そべったまま<br><br>涙も言葉も出ないままで<br><br>ただ夜の深さも知らないままで | kono mama doko ka no tooi kuni de<br><br>asai natsu no sukima ni nesobetta mama<br><br>namida mo kotoba mo denai mama de<br><br>tada yoru no fukasa mo shiranai mama de | Just like this, in some faraway land<br><br>Relaxing stretched out in the cracks of a pale summer<br><br>While I can still hold in my words and tears<br><br>While I don’t know the depths of the night ahead     |
-| 嘘つきなんて　わかって　触れて<br><br>エルマ　まだ　まだ痛いよ<br><br>もうさよならだって歌って<br><br>暮れて夜が来るまで    | usotsuki nante wakatte furete<br><br>eruma mada mada itai yo<br><br>mou sayonara datte utatte<br><br>kurete yoru ga kuru made                                           | I know I’m a liar, I feel it<br><br>Still Elma, it still hurts<br><br>So sing goodbye already<br><br>Until the darkening night falls                                                                              |
-| 辛いことも苦しいことも何も見えないならわからないし<br><br>塞いだ目閉じたままで逃げた<br><br>月明かりの道を歩く             | tsurai koto mo kurushii koto mo nanimo mienai nara wakaranai shi<br><br>fusaida me tojita mama de nigeta<br><br>tsukiakari no michi wo aruku                            | Pain and sadness, if you can’t see anything you won’t understand them so<br><br>With my eyes shut tightly I ran away<br><br>I walk along the moonlit path                                                         |
-| 狭い部屋も冷たい夜も<br><br>眠い昼も　寂しい朝も<br><br>さよならの言葉越しに君の顔を見てる                       | semai heya mo tsumetai yoru mo<br><br>nemui hiru mo sabishii asa mo<br><br>sayonara no kotobagoshi ni kimi no kao wo miteru                                             | Cramped rooms and cold nights,<br><br>Dreamy afternoons and lonely mornings,<br><br>Between the words of farewell I’m looking at your face [[#^1]]                                                                |
-| このまま何処かの遠い国で<br><br>浅い夏の隙間に寝そべったまま<br><br>涙も言葉も出ないままで<br><br>ただ空の青さだけ見たままで  | kono mama doko ka no tooi kuni de<br><br>asai natsu no sukima ni nesobetta mama<br><br>namida mo kotoba mo denai mama de<br><br>tada sora no aosa dake mita mama de     | Just like this, in some faraway land<br><br>Relaxed, stretching out in the cracks of a pale summer<br><br>While I can still hold in my words and tears<br><br>While I’m still only looking at how blue the sky is |
-| ただ君と終わりも知らないままで                                                             | tada kimi to owari mo shiranai mama de                                                                                                                                  | While I still don’t know about parting with you                                                                                                                                                                   |
-| 嘘つきなんて　わかって　触れて<br><br>エルマ　まだ　まだ痛いよ<br><br>もうさよならだって歌って<br><br>暮れて夜が来るまで    | usotsuki nante wakatte furete<br><br>eruma mada mada itai yo<br><br>mou sayonara datte utatte<br><br>kurete yoru ga kuru made                                           | I know I’m a liar, I feel it<br><br>Still Elma, it still hurts<br><br>So sing goodbye already<br><br>Until the darkening night falls                                                                              |
+| Japanese                                                                    | Romanji                                                                                                                                                                 | [Loafer](https://docs.google.com/document/d/1AYYdLls9-Q9GX0WNGIxoXgt_6Ne4jr6-bvVPd43UsGg/edit)                                                                                                                    | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                     |
+| --------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 嘘つきなんて　わかって　触れて<br><br>エルマ　まだ　まだ痛いよ<br><br>もうさよならだって歌って<br><br>暮れて夜が来るまで    | usotsuki nante wakatte furete<br><br>eruma mada mada itai yo<br><br>mou sayonara datte utatte<br><br>kurete yoru ga kuru made                                           | I know I’m a liar, I feel it<br><br>Still Elma, it still hurts<br><br>So sing goodbye already<br><br>Until the darkening night falls                                                                              | Biết là dối trá, nhưng tớ vẫn chấp nhận<br><br>Elma à, tớ vẫn còn đau lắm<br><br>Tớ sẽ hát vang lời tạm biệt<br><br>Cho đến khi chập choạng và màn đêm buông xuống                                                 |
+| 朝日の差す木漏れ日　僕とエルマ<br><br>まだ　まだ眠いかい<br><br>初夏の初め近づく五月の森                        | asahi no sasu komorebi boku to eruma<br><br>mada mada nemui kai<br><br>shoka no hajime chikazuku go gatsu no mori                                                       | Elma and I, with the morning sun shining through the trees on us<br><br>Are you still, still sleepy?<br><br>The early summer is drawing near in the May forest                                                    | Ánh nắng xen qua kẽ lá buổi sớm, tôi và Elma<br><br>Cậu vẫn còn buồn ngủ sao?<br><br>Hơi thở đầu hạ đến với khu rừng tháng 5                                                                                       |
+| 歩きだした顔には花の雫<br><br>ほら　涙みたいだ<br><br>このまま欠伸をしよう<br><br>なんならまた椅子にでも座ろう         | arukidashita kao ni wa hana no shizuku<br><br>hora namida mitai da<br><br>kono mama akubi wo shiyou<br><br>nan nara mata isu ni demo suwarou                            | Walking out, on your face is the dew from a flower<br><br>Look, it’s like a teardrop<br><br>Let’s just stay here and yawn<br><br>Who knows, maybe we’ll even sit down in a chair                                  | Giọt sương trên cánh hoa rơi trên khuôn mặt rảo bước đi<br><br>Ô kìa, hình như là nước mắt<br><br>Cậu cứ ngáp đi thôi<br><br>Nếu có chuyện gì thì mình lại ngồi xuống nhé                                          |
+| 許せないことなんてないんだよ<br><br>君は優しくなんてなれる                                           | yurusenai koto nante nai nda yo<br><br>kimi wa yasashiku nante nareru                                                                                                   | There’s nothing that can’t be forgiven, you know<br><br>You can become kind                                                                                                                                       | Chẳng có chuyện gì là không thể tha thứ cả<br><br>Cậu rồi sẽ trở nên thật bao dung thôi                                                                                                                            |
+| このまま何処かの遠い国で<br><br>浅い夏の隙間に寝そべったまま<br><br>涙も言葉も出ないままで<br><br>ただ夜の深さも知らないままで | kono mama doko ka no tooi kuni de<br><br>asai natsu no sukima ni nesobetta mama<br><br>namida mo kotoba mo denai mama de<br><br>tada yoru no fukasa mo shiranai mama de | Just like this, in some faraway land<br><br>Relaxing stretched out in the cracks of a pale summer<br><br>While I can still hold in my words and tears<br><br>While I don’t know the depths of the night ahead     | Tớ sẽ ngủ gục trong kẽ hở của mùa hè thoảng qua<br><br>Tại một vương quốc nào đó thật xa<br><br>Không có một giọt nước mắt nào hay một lời nói nào<br><br>Ngay cả màn đêm sâu thẳm ra sao chúng ta cũng không biết |
+| 嘘つきなんて　わかって　触れて<br><br>エルマ　まだ　まだ痛いよ<br><br>もうさよならだって歌って<br><br>暮れて夜が来るまで    | usotsuki nante wakatte furete<br><br>eruma mada mada itai yo<br><br>mou sayonara datte utatte<br><br>kurete yoru ga kuru made                                           | I know I’m a liar, I feel it<br><br>Still Elma, it still hurts<br><br>So sing goodbye already<br><br>Until the darkening night falls                                                                              | Biết đó là dối trá, nhưng tớ vẫn chấp nhận<br><br>Elma à, tớ vẫn còn đau lắm<br><br>Tớ sẽ hát vang lời tạm biệt<br><br>Cho đến khi chập choạng và màn đêm buông xuống                                              |
+| 辛いことも苦しいことも何も見えないならわからないし<br><br>塞いだ目閉じたままで逃げた<br><br>月明かりの道を歩く             | tsurai koto mo kurushii koto mo nanimo mienai nara wakaranai shi<br><br>fusaida me tojita mama de nigeta<br><br>tsukiakari no michi wo aruku                            | Pain and sadness, if you can’t see anything you won’t understand them so<br><br>With my eyes shut tightly I ran away<br><br>I walk along the moonlit path                                                         | Chuyện đau khổ, chuyện buồn rầu, nếu không nhìn thấy gì sẽ không biết gì hết<br><br>Tớ đã che mắt lại, cứ vậy mà chạy đi<br><br>Bước trên con đường trải đầy ánh trăng                                             |
+| 狭い部屋も冷たい夜も<br><br>眠い昼も　寂しい朝も<br><br>さよならの言葉越しに君の顔を見てる                       | semai heya mo tsumetai yoru mo<br><br>nemui hiru mo sabishii asa mo<br><br>sayonara no kotobagoshi ni kimi no kao wo miteru                                             | Cramped rooms and cold nights,<br><br>Dreamy afternoons and lonely mornings,<br><br>Between the words of farewell I’m looking at your face [[#^1]]                                                                | Căn phòng hẹp, đêm lạnh lẽo<br><br>Buổi trưa buồn ngủ, buổi sáng buồn thinh<br><br>Bất cứ lúc nào, tớ vẫn ngắm nhìn khuôn mặt cậu qua lời tạm biệt<br><br>Tớ sẽ ngủ gục trong kẽ hở của mùa hè thoảng qua          |
+| このまま何処かの遠い国で<br><br>浅い夏の隙間に寝そべったまま<br><br>涙も言葉も出ないままで<br><br>ただ空の青さだけ見たままで  | kono mama doko ka no tooi kuni de<br><br>asai natsu no sukima ni nesobetta mama<br><br>namida mo kotoba mo denai mama de<br><br>tada sora no aosa dake mita mama de     | Just like this, in some faraway land<br><br>Relaxed, stretching out in the cracks of a pale summer<br><br>While I can still hold in my words and tears<br><br>While I’m still only looking at how blue the sky is | Tại một vương quốc nào đó thật xa<br><br>Không có một giọt nước mắt nào hay một lời nói nào<br><br>Chỉ còn nhìn thấy màu xanh thẳm của bầu trời cao                                                                |
+| ただ君と終わりも知らないままで                                                             | tada kimi to owari mo shiranai mama de                                                                                                                                  | While I still don’t know about parting with you                                                                                                                                                                   | Không còn biết đến khoảnh khắc chia tay cậu                                                                                                                                                                        |
+| 嘘つきなんて　わかって　触れて<br><br>エルマ　まだ　まだ痛いよ<br><br>もうさよならだって歌って<br><br>暮れて夜が来るまで    | usotsuki nante wakatte furete<br><br>eruma mada mada itai yo<br><br>mou sayonara datte utatte<br><br>kurete yoru ga kuru made                                           | I know I’m a liar, I feel it<br><br>Still Elma, it still hurts<br><br>So sing goodbye already<br><br>Until the darkening night falls                                                                              | Biết đó là dối trá, nhưng tớ vẫn chấp nhận<br><br>Elma à, tớ vẫn còn đau lắm<br><br>Tớ sẽ hát vang lời tạm biệt<br><br>Cho đến khi chập choạng và màn đêm buông xuống                                              |
 ##### Notes
 >This is wordplay. Kotoba means word (言葉) but in terms of kanji means “word-leaf”. Hagoshi (葉越し) means “through the leaves”, usually in the context of light being filtered through the leaves, which also is brought up in the song (sasu komerebi = shining through the trees). So a word is created by mashing kotoba and hagoshi together, “kotobagoshi”, and results in the meaning of the line. ^1
