--- a/(2019) That's Why I Gave Up On Music/14. That's Why I Gave Up On Music.md
+++ b/(2019) That's Why I Gave Up On Music/14. That's Why I Gave Up On Music.md
@@ -4,19 +4,19 @@ await dv.view('_script');
 だから僕は音楽を辞めた | Dakara Boku wa Ongaku wo Yameta
 #### Lyrics
 
-| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                      | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/04/09/yorushika-dakara-boku-wa-ongaku-o-yameta/)                                                                                                                                                                                                                   |
-| ---------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 考えたってわからないし<br><br>青空の下、君を待った<br><br>風が吹いた正午、昼下がりを抜け出す想像<br><br>ねぇ、これからどうなるんだろうね<br><br>進め方教わらないんだよ<br><br>君の目を見た 何も言えず僕は歩いた | kangaetatte wakaranai shi<br><br>aozora no shita, kimi o matta<br><br>kaze ga fuita shougo, hirusagari o nukedasu souzou<br><br>nee, kore kara dou naru n’darou ne<br><br>susumekata osowaranai n’da yo<br><br>kimi no me o mita nani mo iezu boku wa aruita | I’ve thought about it, but I still don’t understand<br><br>Under the blue sky, I waited for you<br><br>On that breezy afternoon, my imagination escaped the confines of the day<br><br>Hey, where do I go from here?<br><br>No one has told me how to proceed<br><br>I looked into your eyes and without a word I walked away |
-| 考えたってわからないし<br><br>青春なんてつまらないし<br><br>辞めた筈のピアノ、机を弾く癖が抜けない<br><br>ねぇ、将来何してるだろうね<br><br>音楽はしてないといいね<br><br>困らないでよ              | kangaetatte wakaranai shi<br><br>seishun nante tsumaranai shi<br><br>yameta hazu no PIANO, tsukue o hiku kuse ga nukenai<br><br>nee, shourai nani shite’ru darou ne<br><br>ongaku wa shite’nai to ii ne<br><br>komaranaide yo                                | I’ve thought about it, but I still don’t understand<br><br>Youth is so boring<br><br>I tried to give up piano, but I can’t break the habit of playing on my desk [[#^1]]<br><br>Hey, what will I do in the future?<br><br>It shouldn’t be music, right?<br><br>Don’t worry                                                    |
-| 心の中に一つ線を引いても<br><br>どうしても消えなかった 今更なんだから<br><br>なぁ、もう思い出すな                                                                    | kokoro no naka ni hitotsu sen o hiite mo<br><br>doushite mo kienakatta imasara nandakara<br><br>naa, mou omoidasu na                                                                                                                                         | Even if I drew a single line in my heart<br><br>No matter what I did, it wouldn’t disappear, even now, so<br><br>Hey, I still remember                                                                                                                                                                                        |
-| 間違ってるんだよ<br><br>わかってないよ、あんたら人間も<br><br>本当も愛も世界も苦しさも人生もどうでもいいよ<br><br>正しいかどうか知りたいのだって防衛本能だ<br><br>考えたんだ あんたのせいだ               | machigatte’ru n’da yo<br><br>wakatte’nai yo, antara ningen mo<br><br>hontou mo ai mo sekai mo kurushisa mo jinsei mo dou demo ii yo<br><br>tadashii ka dou ka shiritai no datte bouei honnou da<br><br>kangaeta n’da anta no sei da                          | I’m mistaken<br><br>I don’t understand, I don’t care<br><br>About all you humans or the truth or love or the world or pain or life<br><br>Wanting to know what’s right or wrong is just a self-preservation instinct<br><br>It’s your fault that I thought that                                                               |
-| 考えたってわからないが、本当に年老いたくないんだ<br><br>いつか死んだらって思うだけで胸が空っぽになるんだ<br><br>将来何してるだろうって<br><br>大人になったらわかったよ<br><br>何もしてないさ               | kangaetatte wakaranai ga, hontou ni toshioitakunai n’da<br><br>itsuka shindara tte omou dake de mune ga karappo ni naru n’da<br><br>shourai nani shite’ru darou tte<br><br>otona ni nattara wakatta yo<br><br>nani mo shite’nai sa                           | I’ve thought about it, but I still don’t understand why I truly don’t want to get older<br><br>Just thinking “Someday I’m going to die” makes my chest feel hollow<br><br>“What will I do in the future?”<br><br>When I grew up I understood<br><br>That I’m not going to do anything at all                                  |
-| 幸せな顔した人が憎いのはどう割り切ったらいいんだ<br><br>満たされない頭の奥の化け物みたいな劣等感                                                                         | shiawase na kao shita hito ga nikui no wa dou warikittara ii n’da<br><br>mitasarenai atama no oku no bakemono mitai na rettoukan                                                                                                                             | How do I explain why I hate people who put on happy faces?<br><br>It’s an inferiority complex haunting my unsatisfied mind like a ghost                                                                                                                                                                                       |
-| 間違ってないよ<br><br>なぁ、何だかんだあんたら人間だ<br><br>愛も救いも優しさも根拠がないなんて気味が悪いよ<br><br>ラブソングなんかが痛いのだって防衛本能だ<br><br>どうでもいいか あんたのせいだ             | machigatte’nai yo<br><br>naa, nandakanda antara ningen da<br><br>ai mo sukui mo yasashisa mo konkyo ga nai nante kimi ga warui yo<br><br>RABU SONGU nanka ga itai no datte bouei honnou da<br><br>dou demo ii ka anta no sei da                              | I’m not mistaken<br><br>Hey, with all your differences, you all are human<br><br>When you don’t have love or salvation or kindness or a foundation, it feels bad<br><br>Feeling pain at something like a love song is a self-preservation instinct<br><br>Do I really not care? It’s your fault                               |
-| 考えたってわからないし<br><br>生きてるだけでも苦しいし<br><br>音楽とか儲からないし<br><br>歌詞とか適当でもいいよ<br><br>どうでもいいんだ                                         | kangaetatte wakaranai shi<br><br>ikite’ru dake demo kurushii shi<br><br>ongaku to ka moukaranai shi<br><br>kashi to ka tekitou demo ii yo<br><br>dou demo ii n’da                                                                                            | I’ve thought about it, but I still don’t understand<br><br>Why just living is painful<br><br>Why you can’t make a living from something like music<br><br>I don’t care if the lyrics or whatever are lazily done<br><br>I don’t care about anything                                                                           |
-| 間違ってないだろ<br><br>間違ってないよな<br><br>間違ってないよな                                                                                     | machigatte’nai daro<br><br>machigatte’nai yo na<br><br>machigatte’nai yo na                                                                                                                                                                                  | I’m probably not mistaken<br><br>I’m sure I’m not mistaken<br><br>I’m sure I’m not mistaken                                                                                                                                                                                                                                   |
-| 間違ってるんだよ わかってるんだ<br><br>あんたら人間も<br><br>本当も愛も救いも優しさも人生もどうでもいいんだ<br><br>正しい答えが言えないのだって防衛本能だ<br><br>どうでもいいや あんたのせいだ             | machigatte’ru n’da yo wakatte’ru n’da<br><br>antara ningen mo<br><br>hontou mo ai mo sukui mo yasashisa mo jinsei mo dou demo ii n’da<br><br>tadashii kotae ga ienai no datte bouei honnou da<br><br>dou demo ii ya anta no sei da                           | I’m mistaken, I understand<br>I don’t care<br><br>About all you humans or the truth or love or salvation or kindness or life<br><br>Not being able to give the right answer is a self-preservation instinct<br><br>I don’t care, it’s your fault                                                                              |
-| 僕だって信念があった<br><br>今じゃ塵みたいな想いだ<br><br>何度でも君を書いた<br><br>売れることこそがどうでもよかったんだ<br><br>本当だ 本当なんだ 昔はそうだった                            | boku datte shinnen ga atta<br><br>ima ja gomi mitai na omoi da<br><br>nando demo kimi o kaita<br><br>ureru koto koso ga dou demo yokatta n’da<br><br>hontou da hontou nanda mukashi wa sou datta                                                             | Even I had faith in something once<br><br>Now the feeling is nothing but garbage<br><br>I wrote to you so many times<br><br>I didn’t care about whether I’d be rich and famous<br><br>It’s true, it’s really true, that’s how it was back then                                                                                |
-| だから僕は<br><br>だから僕は音楽を辞めた                                                                                                     | dakara boku wa<br><br>dakara boku wa ongaku o yameta                                                                                                                                                                                                         | That’s why I...<br><br>That’s why I gave up on music                                                                                                                                                                                                                                                                          |
+| Japanese                                                                                                                     | Romanji                                                                                                                                                                                                                                                      | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/04/09/yorushika-dakara-boku-wa-ongaku-o-yameta/)                                                                                                                                                                                                                   | [pikapika](https://pikapika-translate.blogspot.com/p/yorushika-moonlight.html)                                                                                                                                                                                                                                       |
+| ---------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 考えたってわからないし<br><br>青空の下、君を待った<br><br>風が吹いた正午、昼下がりを抜け出す想像<br><br>ねぇ、これからどうなるんだろうね<br><br>進め方教わらないんだよ<br><br>君の目を見た 何も言えず僕は歩いた | kangaetatte wakaranai shi<br><br>aozora no shita, kimi o matta<br><br>kaze ga fuita shougo, hirusagari o nukedasu souzou<br><br>nee, kore kara dou naru n’darou ne<br><br>susumekata osowaranai n’da yo<br><br>kimi no me o mita nani mo iezu boku wa aruita | I’ve thought about it, but I still don’t understand<br><br>Under the blue sky, I waited for you<br><br>On that breezy afternoon, my imagination escaped the confines of the day<br><br>Hey, where do I go from here?<br><br>No one has told me how to proceed<br><br>I looked into your eyes and without a word I walked away | Nghĩ sao cũng chẳng hiểu được<br><br>Dưới bầu trời xanh tớ đã chờ cậu<br><br>Buổi trưa gió phảng phất, còn trí tưởng tượng của tớ đã ra khỏi ban chiều<br><br>Sau này tớ sẽ ra sao đây nhỉ?<br><br>Có ai dạy tớ phải đi thế nào đâu<br><br>Nhìn vào mắt cậu tớ chẳng nói được gì, và tớ lại bước đi                  |
+| 考えたってわからないし<br><br>青春なんてつまらないし<br><br>辞めた筈のピアノ、机を弾く癖が抜けない<br><br>ねぇ、将来何してるだろうね<br><br>音楽はしてないといいね<br><br>困らないでよ              | kangaetatte wakaranai shi<br><br>seishun nante tsumaranai shi<br><br>yameta hazu no PIANO, tsukue o hiku kuse ga nukenai<br><br>nee, shourai nani shite’ru darou ne<br><br>ongaku wa shite’nai to ii ne<br><br>komaranaide yo                                | I’ve thought about it, but I still don’t understand<br><br>Youth is so boring<br><br>I tried to give up piano, but I can’t break the habit of playing on my desk [[#^1]]<br><br>Hey, what will I do in the future?<br><br>It shouldn’t be music, right?<br><br>Don’t worry                                                    | Nghĩ sao cũng không hiểu được<br><br>Thanh xuân sao thật nhàm chán<br><br>Tớ đã bỏ phím đàn piano rồi, nhưng thói quen gõ lên mặt bàn vẫn còn đó<br><br>Này, tương lai tớ sẽ làm gì đây?<br><br>Chỉ cần không làm nhạc là được<br><br>Cậu đừng bối rối đấy nhé                                                       |
+| 心の中に一つ線を引いても<br><br>どうしても消えなかった 今更なんだから<br><br>なぁ、もう思い出すな                                                                    | kokoro no naka ni hitotsu sen o hiite mo<br><br>doushite mo kienakatta imasara nandakara<br><br>naa, mou omoidasu na                                                                                                                                         | Even if I drew a single line in my heart<br><br>No matter what I did, it wouldn’t disappear, even now, so<br><br>Hey, I still remember                                                                                                                                                                                        | Dù có kẻ một đường thẳng chia đôi trái tim<br><br>Thì âm nhạc cũng không thể biến mất trong đầu tớ, vì đã quá muộn rồi<br><br>Này, đừng có nhớ lại nữa đi!                                                                                                                                                           |
+| 間違ってるんだよ<br><br>わかってないよ、あんたら人間も<br><br>本当も愛も世界も苦しさも人生もどうでもいいよ<br><br>正しいかどうか知りたいのだって防衛本能だ<br><br>考えたんだ あんたのせいだ               | machigatte’ru n’da yo<br><br>wakatte’nai yo, antara ningen mo<br><br>hontou mo ai mo sekai mo kurushisa mo jinsei mo dou demo ii yo<br><br>tadashii ka dou ka shiritai no datte bouei honnou da<br><br>kangaeta n’da anta no sei da                          | I’m mistaken<br><br>I don’t understand, I don’t care<br><br>About all you humans or the truth or love or the world or pain or life<br><br>Wanting to know what’s right or wrong is just a self-preservation instinct<br><br>It’s your fault that I thought that                                                               | Tôi nhầm rồi, tôi chẳng biết gì hết!<br><br>Loài người các ngươi<br>Sự thật, tình yêu, thế giới, khổ đau, cuộc đời... tất cả sao cũng được hết!<br><br>Lời biện hộ muốn biết đúng sai chỉ là bản năng tự vệ mà thôi<br><br>Tôi nghĩ rồi, lỗi chính là tại cậu đó!                                                    |
+| 考えたってわからないが、本当に年老いたくないんだ<br><br>いつか死んだらって思うだけで胸が空っぽになるんだ<br><br>将来何してるだろうって<br><br>大人になったらわかったよ<br><br>何もしてないさ               | kangaetatte wakaranai ga, hontou ni toshioitakunai n’da<br><br>itsuka shindara tte omou dake de mune ga karappo ni naru n’da<br><br>shourai nani shite’ru darou tte<br><br>otona ni nattara wakatta yo<br><br>nani mo shite’nai sa                           | I’ve thought about it, but I still don’t understand why I truly don’t want to get older<br><br>Just thinking “Someday I’m going to die” makes my chest feel hollow<br><br>“What will I do in the future?”<br><br>When I grew up I understood<br><br>That I’m not going to do anything at all                                  | Nghĩ mãi tớ vẫn không hiểu được<br>Nhưng tớ không muốn già đi đâu<br><br>Vì chỉ cần nghĩ một ngày nào đó mình sẽ chết đi<br>Là trái tim tớ lại trở nên trống rỗng<br><br>"Tương lai tớ sẽ làm gì đây?"<br><br>Lớn lên rồi tớ mới hiểu ra rằng<br>Tớ chẳng làm cái gì hết!                                            |
+| 幸せな顔した人が憎いのはどう割り切ったらいいんだ<br><br>満たされない頭の奥の化け物みたいな劣等感                                                                         | shiawase na kao shita hito ga nikui no wa dou warikittara ii n’da<br><br>mitasarenai atama no oku no bakemono mitai na rettoukan                                                                                                                             | How do I explain why I hate people who put on happy faces?<br><br>It’s an inferiority complex haunting my unsatisfied mind like a ghost                                                                                                                                                                                       | Tớ chẳng biết phải giải thích tại sao<br>Tớ lại căm ghét những kẻ mang vẻ hạnh phúc trên mặt<br><br>Vẻ tự ti như bóng ma sâu bên trong suy nghĩ thèm khát của tớ                                                                                                                                                     |
+| 間違ってないよ<br><br>なぁ、何だかんだあんたら人間だ<br><br>愛も救いも優しさも根拠がないなんて気味が悪いよ<br><br>ラブソングなんかが痛いのだって防衛本能だ<br><br>どうでもいいか あんたのせいだ             | machigatte’nai yo<br><br>naa, nandakanda antara ningen da<br><br>ai mo sukui mo yasashisa mo konkyo ga nai nante kimi ga warui yo<br><br>RABU SONGU nanka ga itai no datte bouei honnou da<br><br>dou demo ii ka anta no sei da                              | I’m not mistaken<br><br>Hey, with all your differences, you all are human<br><br>When you don’t have love or salvation or kindness or a foundation, it feels bad<br><br>Feeling pain at something like a love song is a self-preservation instinct<br><br>Do I really not care? It’s your fault                               | Tôi không nhầm đâu!<br><br>Mấy người nói gì thì nói cũng chỉ là con người thôi!<br><br>Tình yêu, sự cứu rỗi rồi cả lòng tốt<br>Tất cả đều không đáng tin, nghe thật ghê tởm!<br><br>Câu nói "tình ca nghe đau tai lắm"<br>Cũng chỉ là bản năng tự vệ mà thôi<br><br>Tôi không quan tâm nữa, lỗi chính là tại cậu đó! |
+| 考えたってわからないし<br><br>生きてるだけでも苦しいし<br><br>音楽とか儲からないし<br><br>歌詞とか適当でもいいよ<br><br>どうでもいいんだ                                         | kangaetatte wakaranai shi<br><br>ikite’ru dake demo kurushii shi<br><br>ongaku to ka moukaranai shi<br><br>kashi to ka tekitou demo ii yo<br><br>dou demo ii n’da                                                                                            | I’ve thought about it, but I still don’t understand<br><br>Why just living is painful<br><br>Why you can’t make a living from something like music<br><br>I don’t care if the lyrics or whatever are lazily done<br><br>I don’t care about anything                                                                           | Nghĩ mãi mà tớ vẫn không hiểu<br><br>Chỉ sống thôi sao cũng khổ sở quá<br><br>Âm nhạc cũng không đẻ ra tiền<br><br>Nên ca từ qua loa cũng chẳng sao<br><br>Mọi thứ sao cũng được hết!                                                                                                                                |
+| 間違ってないだろ<br><br>間違ってないよな<br><br>間違ってないよな                                                                                     | machigatte’nai daro<br><br>machigatte’nai yo na<br><br>machigatte’nai yo na                                                                                                                                                                                  | I’m probably not mistaken<br><br>I’m sure I’m not mistaken<br><br>I’m sure I’m not mistaken                                                                                                                                                                                                                                   | Tớ không hề sai mà...<br><br>Tớ không sai phải không?<br><br>Tớ không sai đâu mà...                                                                                                                                                                                                                                  |
+| 間違ってるんだよ わかってるんだ<br><br>あんたら人間も<br><br>本当も愛も救いも優しさも人生もどうでもいいんだ<br><br>正しい答えが言えないのだって防衛本能だ<br><br>どうでもいいや あんたのせいだ             | machigatte’ru n’da yo wakatte’ru n’da<br><br>antara ningen mo<br><br>hontou mo ai mo sukui mo yasashisa mo jinsei mo dou demo ii n’da<br><br>tadashii kotae ga ienai no datte bouei honnou da<br><br>dou demo ii ya anta no sei da                           | I’m mistaken, I understand<br>I don’t care<br><br>About all you humans or the truth or love or salvation or kindness or life<br><br>Not being able to give the right answer is a self-preservation instinct<br><br>I don’t care, it’s your fault                                                                              | Tôi sai rồi, tôi hiểu mà!<br><br>Loài người các ngươi<br>Sự thật, tình yêu, sự cứu rỗi và lòng tốt<br>Cả cuộc đời sao cũng được hết!<br><br>Tôi không biết câu trả lời chính xác cũng chỉ là bản năng tự vệ mà thôi<br><br>Sao cũng được, lỗi chính là tại cậu đó!                                                   |
+| 僕だって信念があった<br><br>今じゃ塵みたいな想いだ<br><br>何度でも君を書いた<br><br>売れることこそがどうでもよかったんだ<br><br>本当だ 本当なんだ 昔はそうだった                            | boku datte shinnen ga atta<br><br>ima ja gomi mitai na omoi da<br><br>nando demo kimi o kaita<br><br>ureru koto koso ga dou demo yokatta n’da<br><br>hontou da hontou nanda mukashi wa sou datta                                                             | Even I had faith in something once<br><br>Now the feeling is nothing but garbage<br><br>I wrote to you so many times<br><br>I didn’t care about whether I’d be rich and famous<br><br>It’s true, it’s really true, that’s how it was back then                                                                                | Ngay cả tớ đã từng có niềm tin<br><br>Nhưng giờ chúng không còn là gì ngoài rác rưởi<br><br>Tớ đã viết về cậu không biết bao nhiêu lần<br><br>Có bán được hay không cũng chẳng sao hết<br><br>Thật đó, sự thật là vậy, ngày xưa tớ đã vậy                                                                            |
+| だから僕は<br><br>だから僕は音楽を辞めた                                                                                                     | dakara boku wa<br><br>dakara boku wa ongaku o yameta                                                                                                                                                                                                         | That’s why I...<br><br>That’s why I gave up on music                                                                                                                                                                                                                                                                          | Vậy nên tớ đã...<br><br>Vậy nên tớ đã từ bỏ âm nhạc                                                                                                                                                                                                                                                                  |
 ##### Notes
 >tapping his fingers on his desk as if playing piano; I had trouble thinking of a better way to word this. ^1
